--- a/Johnny Wallet/www/templates/gallery-wide.html
+++ b/Johnny Wallet/www/templates/gallery-wide.html
@@ -78,11 +78,11 @@
                     </ul>
                 </li>                 
                 <li class="has-submenu">
-                    <a class="deploy-submenu" href="#"><i class="fa fa-camera"></i>Gallery<i class="fa fa-plus"></i></a>
-                    <ul class="submenu">
+                    <a class="deploy-submenu active-submenu" href="#"><i class="fa fa-camera"></i>Gallery<i class="fa fa-plus"></i></a>
+                    <ul class="submenu active-submenu-items">
                         <li><a href="gallery-square.html"><i class="fa fa-angle-right"></i>Square Thumbs<i class="fa fa-circle"></i></a></li>
                         <li><a href="gallery-round.html"><i class="fa fa-angle-right"></i>Round Thumbs<i class="fa fa-circle"></i></a></li>
-                        <li><a href="gallery-wide.html"><i class="fa fa-angle-right"></i>Wide Thumbs<i class="fa fa-circle"></i></a></li>
+                        <li><a class="active-menu" href="gallery-wide.html"><i class="fa fa-angle-right"></i>Wide Thumbs<i class="fa fa-circle"></i></a></li>
                     </ul>
                 </li>                 
                 <li class="has-submenu">
@@ -96,23 +96,38 @@
                     </ul>
                 </li>                
                 <li class="has-submenu">
-                    <a class="deploy-submenu active-submenu" href="#"><i class="fa fa-mobile"></i>App Specific<i class="fa fa-plus"></i></a>
-                    <ul class="submenu active-submenu-items">
+                    <a class="deploy-submenu" href="#"><i class="fa fa-mobile"></i>App Specific<i class="fa fa-plus"></i></a>
+                    <ul class="submenu">
                         <li><a href="pageapp-login.html"><i class="fa fa-angle-right"></i>Login<i class="fa fa-circle"></i></a></li>
                         <li><a href="pageapp-sigin.html"><i class="fa fa-angle-right"></i>Signup<i class="fa fa-circle"></i></a></li>
                         <li><a href="pageapp-coverpage.html"><i class="fa fa-angle-right"></i>Coverpage<i class="fa fa-circle"></i></a></li>
                         <li><a href="pageapp-userlist.html"><i class="fa fa-angle-right"></i>User List<i class="fa fa-circle"></i></a></li>
                         <li><a href="pageapp-calendar.html"><i class="fa fa-angle-right"></i>Calendar<i class="fa fa-circle"></i></a></li>
                         <li><a href="pageapp-activity.html"><i class="fa fa-angle-right"></i>Activity Feed<i class="fa fa-circle"></i></a></li>
-                        <li><a class="active-menu" href="pageapp-bubbles.html"><i class="fa fa-angle-right"></i>Chat Bubbles<i class="fa fa-circle"></i></a></li>
+                        <li><a href="pageapp-bubbles.html"><i class="fa fa-angle-right"></i>Chat Bubbles<i class="fa fa-circle"></i></a></li>
                         <li><a href="pageapp-shareboxes.html"><i class="fa fa-angle-right"></i>Share Boxes<i class="fa fa-circle"></i></a></li>
-                        <li><a href="pageapp-toggles.html"><i class="fa fa-angle-right"></i>Content Toggles<i class="fa fa-circle"></i></a></li>
                     </ul>
                 </li>
                 <li><a href="page-video.html"><i class="fa fa-youtube-play"></i>Videos<i class="fa fa-circle"></i></a></li>
                 <li><a href="page-blog.html"><i class="fa fa-pencil"></i>Blog<i class="fa fa-circle"></i></a></li>
                 <li><a href="contact.html"><i class="fa fa-envelope"></i>Contact<i class="fa fa-circle"></i></a></li>
             </ul>
+            <div class="sidebar-divider">
+                Copyright 2015. All rights reserved.
+            </div>
+        </div>
+        <div class="snap-drawer snap-drawer-right">
+            <div class="sidebar-header">
+                <a href="#"><i class="fa fa-phone"></i></a>
+                <a href="#"><i class="fa fa-comment"></i></a>
+                <a href="#"><i class="fa fa-facebook"></i></a>
+                <a href="#"><i class="fa fa-twitter"></i></a>
+                <a href="#"><i class="fa fa-times"></i></a>                
+            </div>
+            
+            <div class="sidebar-logo">
+                <a href="index.html"></a>
+            </div>
             
             <div class="sidebar-divider">
                 get social with us
@@ -151,7 +166,6 @@
                 <strong>Atention</strong>
                 <em>Released a right sidebar item</em>
             </a>
-            
             <div class="sidebar-divider">
                 Copyright 2015. All rights reserved.
             </div>
@@ -163,51 +177,45 @@
         <div class="header">
             <a href="index.html" class="header-logo"></a>
             <a href="#" class="open-menu"><i class="fa fa-navicon"></i></a>
+            <a href="#" class="open-more"><i class="fa fa-envelope-o"></i></a>
         </div>
         <div class="header-clear"></div>
         
-        <div class="content">
-
-            <div class="container no-bottom">
-                <h3>Speach bubbles?</h3>
-                <p>
-                    A nice way of showing off a conversation maybe?
-                    It's absolutely simple to create them and use them!
-                </p>
-            </div>
-            
-            <div class="decoration"></div>
-            
-            <div class="one-half-responsive">
-                <em class="speach-left-title">John Doe says:</em>
-                <p class="speach-left">This is just an awesome bubble! It's quite cute isn't it?</p>
-
-                <div class="clear"></div>
-
-                <em class="speach-right-title">Jane Doe replied:</em>
-                <p class="speach-right blue-bubble">Yeap! It's awesome isn't it and it's not that hard to use! And they act like bubbles, only expanding to 75% of width!</p>
-
-                <div class="clear"></div>  
-            </div> 
-
-            <div class="decoration hide-if-responsive"></div>
-
-            <div class="one-half-responsive last-column">
-                <em class="speach-left-title">John Doe says:</em>
-                <p class="speach-left">This is just an awesome bubble! It's quite cute isn't it?</p>
-
-                <div class="clear"></div>
-
-                <em class="speach-right-title">Jane Doe replied:</em>
-                <p class="speach-right green-bubble">Yeap! It's awesome isn't it and it's not that hard to use! And they act like bubbles, only expanding to 75% of width!</p>
-
-                <div class="clear"></div>  
-            </div> 
-            
-            <div class="decoration"></div>
-     
+        <div class="portfolio-wide full-bottom">
+            <a href="images/pictures/1.jpg" class="swipebox portfolio-wide-item" title="Your caption here!">
+                <h3>Swing near the ocean</h3>
+                <p>This is a wide item, just tap it to read more</p>
+                <div class="overlay"></div>
+                <img class="responsive-image" src="images/pictures/1ww.jpg" alt="img">
+            </a>
+            <a href="images/pictures/3.jpg" class="swipebox portfolio-wide-item" title="Your caption here!">
+                <h3>City street at dawn</h3>
+                <p>This is a wide item, just tap it to read more</p>
+                <div class="overlay"></div>
+                <img class="responsive-image" src="images/pictures/3ww.jpg" alt="img">
+            </a>
+            <a href="images/pictures/3.jpg" class="swipebox portfolio-wide-item" title="Your caption here!">
+                <h3>The ocean landscape</h3>
+                <p>This is a wide item, just tap it to read more</p>
+                <div class="overlay"></div>
+                <img class="responsive-image" src="images/pictures/4ww.jpg" alt="img">
+            </a>
+            <a href="images/pictures/4.jpg" class="swipebox portfolio-wide-item" title="Your caption here!">
+                <h3>Beautiful grain field</h3>
+                <p>This is a wide item, just tap it to read more</p>
+                <div class="overlay"></div>
+                <img class="responsive-image" src="images/pictures/5ww.jpg" alt="img">
+            </a>
+            <a href="images/pictures/5.jpg" class="swipebox portfolio-wide-item" title="Your caption here!">
+                <h3>The house on the hill</h3>
+                <p>This is a wide item, just tap it to read more</p>
+                <div class="overlay"></div>
+                <img class="responsive-image" src="images/pictures/6ww.jpg" alt="img">
+            </a>
         </div>
         
+        <div class="content decoration"></div>
+            
         <!-- Page Footer-->
         <div class="footer">
             <div class="footer-socials half-bottom">
@@ -256,19 +264,6 @@
 </div>
 
 </body>
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
