--- a/Johnny Wallet/www/templates/page-video.html
+++ b/Johnny Wallet/www/templates/page-video.html
@@ -86,12 +86,12 @@
                     </ul>
                 </li>                 
                 <li class="has-submenu">
-                    <a class="deploy-submenu active-submenu" href="#"><i class="fa fa-file"></i>Pages<i class="fa fa-plus"></i></a>
-                    <ul class="submenu active-submenu-items">
+                    <a class="deploy-submenu" href="#"><i class="fa fa-file"></i>Pages<i class="fa fa-plus"></i></a>
+                    <ul class="submenu">
                         <li><a href="page-error.html"><i class="fa fa-angle-right"></i>404 Page<i class="fa fa-circle"></i></a></li>
                         <li><a href="page-soon.html"><i class="fa fa-angle-right"></i>Soon Page<i class="fa fa-circle"></i></a></li>
                         <li><a href="page-updates.html"><i class="fa fa-angle-right"></i>Updates Page<i class="fa fa-circle"></i></a></li>
-                        <li><a class="active-menu" href="page-timeline.html"><i class="fa fa-angle-right"></i>Timeline Page<i class="fa fa-circle"></i></a></li>
+                        <li><a href="page-timeline.html"><i class="fa fa-angle-right"></i>Timeline Page<i class="fa fa-circle"></i></a></li>
                         <li><a href="index2.html"><i class="fa fa-angle-right"></i>Home Fullscreen<i class="fa fa-circle"></i></a></li>
                     </ul>
                 </li>                
@@ -108,10 +108,26 @@
                         <li><a href="pageapp-shareboxes.html"><i class="fa fa-angle-right"></i>Share Boxes<i class="fa fa-circle"></i></a></li>
                     </ul>
                 </li>
-                <li><a href="page-video.html"><i class="fa fa-youtube-play"></i>Videos<i class="fa fa-circle"></i></a></li>
+                <li><a class="active-menu" href="page-video.html"><i class="fa fa-youtube-play"></i>Videos<i class="fa fa-circle"></i></a></li>
                 <li><a href="page-blog.html"><i class="fa fa-pencil"></i>Blog<i class="fa fa-circle"></i></a></li>
                 <li><a href="contact.html"><i class="fa fa-envelope"></i>Contact<i class="fa fa-circle"></i></a></li>
             </ul>
+            <div class="sidebar-divider">
+                Copyright 2015. All rights reserved.
+            </div>
+        </div>
+        <div class="snap-drawer snap-drawer-right">
+            <div class="sidebar-header">
+                <a href="#"><i class="fa fa-phone"></i></a>
+                <a href="#"><i class="fa fa-comment"></i></a>
+                <a href="#"><i class="fa fa-facebook"></i></a>
+                <a href="#"><i class="fa fa-twitter"></i></a>
+                <a href="#"><i class="fa fa-times"></i></a>                
+            </div>
+            
+            <div class="sidebar-logo">
+                <a href="index.html"></a>
+            </div>
             
             <div class="sidebar-divider">
                 get social with us
@@ -150,7 +166,6 @@
                 <strong>Atention</strong>
                 <em>Released a right sidebar item</em>
             </a>
-            
             <div class="sidebar-divider">
                 Copyright 2015. All rights reserved.
             </div>
@@ -162,100 +177,42 @@
         <div class="header">
             <a href="index.html" class="header-logo"></a>
             <a href="#" class="open-menu"><i class="fa fa-navicon"></i></a>
+            <a href="#" class="open-more"><i class="fa fa-envelope-o"></i></a>
         </div>
         <div class="header-clear"></div>
         
         <div class="content">
+            
             <div class="container no-bottom">
-                <h3>Page Timeline</h3>
+                <h3>Video Page</h3>
                 <p>
-                    Timelines are easy to use and update. Easy classes you just copy and paste. Timelines support text, images, videos, quotes,
-                    and everyother combination you can think of!
+                    Embed your videos with great ease with default embed codes. The responsive-video 
+                    class handles the rest and automatically cleans the code and the design.
                 </p>
             </div>
             
             <div class="decoration"></div>
             
-            <div class="timeline">
-                <div class="timeline-decoration" style="height:96%;"></div>
-                <div class="timeline-item">
-                    <div class="timeline-icon">
-                        <i class="fa fa-pencil"></i>
-                    </div>
-                    <div class="timeline-text">
-                        <h3 class="title">Text Timeline</h3>
-                        <em class="subtitle">A timeline text post</em>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                            Donec blandit faucibus suscipit. Donec vestibulum erat 
-                            in nunc tempor, eget ornare arcu. 
-                        </p>
-                    </div>
-                </div>
-                <div class="timeline-item">
-                    <div class="timeline-icon">
-                        <i class="fa fa-camera"></i>
-                    </div>
-                    <div class="timeline-text">
-                        <h3 class="title">Image Timeline</h3>
-                        <em class="subtitle">A timeline image post</em>
-                        <img src="images/pictures/5ww.jpg" alt="img" class="responsive-image">
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                            Donec blandit faucibus suscipit. Donec vestibulum erat 
-                            in nunc tempor, eget ornare arcu. 
-                        </p>
-                    </div>
-                </div>
-                <div class="timeline-item">
-                    <div class="timeline-icon">
-                        <i class="fa fa-vimeo-square"></i>
-                    </div>
-                    <div class="timeline-text">
-                        <h3 class="title">Video Timeline</h3>
-                        <em class="subtitle">A timeline video post</em>
-                        <iframe class="responsive-video" src="http://player.vimeo.com/video/7449107"></iframe>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                            Donec blandit faucibus suscipit. Donec vestibulum erat 
-                            in nunc tempor, eget ornare arcu. 
-                        </p>
-                    </div>
-                </div>
-                <div class="timeline-item">
-                    <div class="timeline-icon">
-                        <i class="fa fa-youtube-play"></i>
-                    </div>
-                    <div class="timeline-text">
-                        <h3 class="title">Video Timeline</h3>
-                        <em class="subtitle">A timeline video post</em>
-                        <iframe class="responsive-video" src="http://www.youtube.com/embed/9S-RHXlsjyY"></iframe>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                            Donec blandit faucibus suscipit. Donec vestibulum erat 
-                            in nunc tempor, eget ornare arcu. 
-                        </p>
-                    </div>
-                </div>
-                <div class="timeline-item">
-                    <div class="timeline-icon">
-                        <i class="fa fa-quote-left"></i>
-                    </div>
-                    <div class="timeline-text timeline-quote no-bottom">
-                        <h3 class="title">This is an amazing template, thanks for sharing! My mobile looks awesome now!</h3>
-                        <a href="#" class="subtitle">John Doe, ThemeForest Buyer</a>
-                    </div>
-                </div>
-                <div class="timeline-item timeline-ending">
-                    <div class="timeline-icon">
-                        <i class="fa fa-times"></i>
-                    </div>
-                    <div class="timeline-text timeline-quote no-bottom">
-                        <h3 class="title">Our timeline events end here, but check uot the top part for news!</h3>
-                    </div>
-                </div>
-            </div>    
+            <div>
+                <iframe class="responsive-video" src="http://player.vimeo.com/video/7449107"></iframe>
+                <h4>YouTube Video</h4>
+                <p>We like portfolios a lot! We've optimized them to the extreme to make them work like a charm on mobiles!</p>
+            </div>
             <div class="decoration"></div>
+            <div>
+                <iframe class="responsive-video" src="http://www.youtube.com/embed/9S-RHXlsjyY"></iframe>
+                <h4>Vimeo Video</h4>
+                <p>We like portfolios a lot! We've optimized them to the extreme to make them work like a charm on mobiles!</p>
+            </div>
+            <div class="decoration"></div>
+            <div>
+                <iframe class="responsive-video" src="http://player.vimeo.com/video/7449107"></iframe>
+                <h4>YouTube Video</h4>
+                <p>We like portfolios a lot! We've optimized them to the extreme to make them work like a charm on mobiles!</p>
+            </div>
+            
+            <div class="decoration"></div>
+            
         </div>
         <!-- Page Footer-->
         <div class="footer">
