--- a/Johnny Wallet/www/templates/pageapp-bubbles.html
+++ b/Johnny Wallet/www/templates/pageapp-bubbles.html
@@ -102,10 +102,10 @@
                         <li><a href="pageapp-sigin.html"><i class="fa fa-angle-right"></i>Signup<i class="fa fa-circle"></i></a></li>
                         <li><a href="pageapp-coverpage.html"><i class="fa fa-angle-right"></i>Coverpage<i class="fa fa-circle"></i></a></li>
                         <li><a href="pageapp-userlist.html"><i class="fa fa-angle-right"></i>User List<i class="fa fa-circle"></i></a></li>
-                        <li><a href="pageapp-activity.html"><i class="fa fa-angle-right"></i>Activity Feed<i class="fa fa-circle"></i></a></li>
                         <li><a href="pageapp-calendar.html"><i class="fa fa-angle-right"></i>Calendar<i class="fa fa-circle"></i></a></li>
-                        <li><a href="pageapp-bubbles.html"><i class="fa fa-angle-right"></i>Chat Bubbles<i class="fa fa-circle"></i></a></li>
-                        <li><a class="active-menu" href="pageapp-shareboxes.html"><i class="fa fa-angle-right"></i>Share Boxes<i class="fa fa-circle"></i></a></li>
+                        <li><a href="pageapp-activity.html"><i class="fa fa-angle-right"></i>Activity Feed<i class="fa fa-circle"></i></a></li>
+                        <li><a class="active-menu" href="pageapp-bubbles.html"><i class="fa fa-angle-right"></i>Chat Bubbles<i class="fa fa-circle"></i></a></li>
+                        <li><a href="pageapp-shareboxes.html"><i class="fa fa-angle-right"></i>Share Boxes<i class="fa fa-circle"></i></a></li>
                         <li><a href="pageapp-toggles.html"><i class="fa fa-angle-right"></i>Content Toggles<i class="fa fa-circle"></i></a></li>
                     </ul>
                 </li>
@@ -113,6 +113,22 @@
                 <li><a href="page-blog.html"><i class="fa fa-pencil"></i>Blog<i class="fa fa-circle"></i></a></li>
                 <li><a href="contact.html"><i class="fa fa-envelope"></i>Contact<i class="fa fa-circle"></i></a></li>
             </ul>
+            <div class="sidebar-divider">
+                Copyright 2015. All rights reserved.
+            </div>
+        </div>
+        <div class="snap-drawer snap-drawer-right">
+            <div class="sidebar-header">
+                <a href="#"><i class="fa fa-phone"></i></a>
+                <a href="#"><i class="fa fa-comment"></i></a>
+                <a href="#"><i class="fa fa-facebook"></i></a>
+                <a href="#"><i class="fa fa-twitter"></i></a>
+                <a href="#"><i class="fa fa-times"></i></a>                
+            </div>
+            
+            <div class="sidebar-logo">
+                <a href="index.html"></a>
+            </div>
             
             <div class="sidebar-divider">
                 get social with us
@@ -151,7 +167,6 @@
                 <strong>Atention</strong>
                 <em>Released a right sidebar item</em>
             </a>
-            
             <div class="sidebar-divider">
                 Copyright 2015. All rights reserved.
             </div>
@@ -163,73 +178,50 @@
         <div class="header">
             <a href="index.html" class="header-logo"></a>
             <a href="#" class="open-menu"><i class="fa fa-navicon"></i></a>
+            <a href="#" class="open-more"><i class="fa fa-envelope-o"></i></a>
         </div>
         <div class="header-clear"></div>
         
         <div class="content">
-            <img class="responsive-image" src="images/pictures/3w.jpg" alt="img">
-            <p>
-                Share your content with easy to place share buttons, these are connected to social media.
-                When tapping them, a new page will appear that will have the current page address added!
-            </p>
+
+            <div class="container no-bottom">
+                <h3>Speach bubbles?</h3>
+                <p>
+                    A nice way of showing off a conversation maybe?
+                    It's absolutely simple to create them and use them!
+                </p>
+            </div>
+            
             <div class="decoration"></div>
             
-            <div class="one-half-responsive">    
-                <div clas="container">
-                    <h3>Popup Share Box</h3>
-                    <p>
-                        Adding one class name to any element will make that element able to deploy a sharing box with
-                        the most popular social networks.
-                    </p>  
-                    <a href="#" class="show-share-bottom button button-green full-button full-bottom">Show Share Bottom Pop-up</a>
-                </div>
+            <div class="one-half-responsive">
+                <em class="speach-left-title">John Doe says:</em>
+                <p class="speach-left">This is just an awesome bubble! It's quite cute isn't it?</p>
 
-                <div class="decoration"></div>
+                <div class="clear"></div>
 
-                <div class="container">
-                    <h3>Share Buttons</h3>
-                    <p>
-                        Share buttons are easy to use and can be added under any box or container you wish.
-                    </p>
-                    <a href="https://www.facebook.com/sharer/sharer.php?u=http://www.themeforest.net/" class="facebook-color share-button-regular"><i class="fa fa-facebook"></i>Share to Facebook</a>
-                    <div class="one-half">
-                        <a href="https://twitter.com/home?status=Check%20out%20ThemeForest%20http://www.themeforest.net" class="twitter-color share-button-regular no-bottom"><i class="fa fa-twitter"></i>Twitter</a>
-                    </div>
-                    <div class="one-half last-column">
-                        <a href="https://plus.google.com/share?url=http://www.themeforest.net" class="google-color share-button-regular no-bottom"><i class="fa fa-google-plus"></i>Google</a>
-                    </div>
-                </div>
-                <div class="decoration hide-if-responsive"></div>
-            </div>
-                        
+                <em class="speach-right-title">Jane Doe replied:</em>
+                <p class="speach-right blue-bubble">Yeap! It's awesome isn't it and it's not that hard to use! And they act like bubbles, only expanding to 75% of width!</p>
+
+                <div class="clear"></div>  
+            </div> 
+
+            <div class="decoration hide-if-responsive"></div>
+
             <div class="one-half-responsive last-column">
-                <div class="container">
-                    <h3>Share Circles</h3>
-                    <p>Regular share circles, can be added under any container you wish, copy and paste.</p>
-                    <a class="share-button-round facebook-color"  href="#"><i class="fa fa-facebook"></i></a>
-                    <a class="share-button-round twitter-color"   href="#"><i class="fa fa-twitter"></i></a>
-                    <a class="share-button-round google-color"    href="#"><i class="fa fa-google-plus"></i></a>
-                    <a class="share-button-round pinterest-color" href="#"><i class="fa fa-pinterest"></i></a>
-                    <a class="share-button-round sms-color"       href="#"><i class="fa fa-comment-o"></i></a>
-                    <a class="share-button-round mail-color"      href="#"><i class="fa fa-envelope-o"></i></a>
-                </div>
+                <em class="speach-left-title">John Doe says:</em>
+                <p class="speach-left">This is just an awesome bubble! It's quite cute isn't it?</p>
 
-                <div class="decoration"></div>
+                <div class="clear"></div>
 
-                <div class="container">
-                    <h3>Share Squares</h3>
-                    <p>Regular share circles, can be added under any container you wish, copy and paste.</p>
-                    <a class="share-button-square facebook-color"   href="#"><i class="fa fa-facebook"></i></a>
-                    <a class="share-button-square twitter-color"    href="#"><i class="fa fa-twitter"></i></a>
-                    <a class="share-button-square google-color"     href="#"><i class="fa fa-google-plus"></i></a>
-                    <a class="share-button-square pinterest-color"  href="#"><i class="fa fa-pinterest"></i></a>
-                    <a class="share-button-square sms-color"        href="#"><i class="fa fa-comment-o"></i></a>
-                    <a class="share-button-square mail-color"       href="#"><i class="fa fa-envelope-o"></i></a>
-                </div>                
-            </div>
+                <em class="speach-right-title">Jane Doe replied:</em>
+                <p class="speach-right green-bubble">Yeap! It's awesome isn't it and it's not that hard to use! And they act like bubbles, only expanding to 75% of width!</p>
+
+                <div class="clear"></div>  
+            </div> 
             
             <div class="decoration"></div>
-            
+     
         </div>
         
         <!-- Page Footer-->
