--- a/Johnny Wallet/www/templates/pageapp-sigin.html
+++ b/Johnny Wallet/www/templates/pageapp-sigin.html
@@ -99,8 +99,8 @@
                     <a class="deploy-submenu active-submenu" href="#"><i class="fa fa-mobile"></i>App Specific<i class="fa fa-plus"></i></a>
                     <ul class="submenu active-submenu-items">
                         <li><a href="pageapp-login.html"><i class="fa fa-angle-right"></i>Login<i class="fa fa-circle"></i></a></li>
-                        <li><a href="pageapp-sigin.html"><i class="fa fa-angle-right"></i>Signup<i class="fa fa-circle"></i></a></li>
-                        <li><a class="active-menu" href="pageapp-coverpage.html"><i class="fa fa-angle-right"></i>Coverpage<i class="fa fa-circle"></i></a></li>
+                        <li><a class="active-menu" href="pageapp-sigin.html"><i class="fa fa-angle-right"></i>Signup<i class="fa fa-circle"></i></a></li>
+                        <li><a href="pageapp-coverpage.html"><i class="fa fa-angle-right"></i>Coverpage<i class="fa fa-circle"></i></a></li>
                         <li><a href="pageapp-userlist.html"><i class="fa fa-angle-right"></i>User List<i class="fa fa-circle"></i></a></li>
                         <li><a href="pageapp-calendar.html"><i class="fa fa-angle-right"></i>Calendar<i class="fa fa-circle"></i></a></li>
                         <li><a href="pageapp-activity.html"><i class="fa fa-angle-right"></i>Activity Feed<i class="fa fa-circle"></i></a></li>
@@ -113,6 +113,22 @@
                 <li><a href="page-blog.html"><i class="fa fa-pencil"></i>Blog<i class="fa fa-circle"></i></a></li>
                 <li><a href="contact.html"><i class="fa fa-envelope"></i>Contact<i class="fa fa-circle"></i></a></li>
             </ul>
+            <div class="sidebar-divider">
+                Copyright 2015. All rights reserved.
+            </div>
+        </div>
+        <div class="snap-drawer snap-drawer-right">
+            <div class="sidebar-header">
+                <a href="#"><i class="fa fa-phone"></i></a>
+                <a href="#"><i class="fa fa-comment"></i></a>
+                <a href="#"><i class="fa fa-facebook"></i></a>
+                <a href="#"><i class="fa fa-twitter"></i></a>
+                <a href="#"><i class="fa fa-times"></i></a>                
+            </div>
+            
+            <div class="sidebar-logo">
+                <a href="index.html"></a>
+            </div>
             
             <div class="sidebar-divider">
                 get social with us
@@ -151,7 +167,6 @@
                 <strong>Atention</strong>
                 <em>Released a right sidebar item</em>
             </a>
-            
             <div class="sidebar-divider">
                 Copyright 2015. All rights reserved.
             </div>
@@ -163,53 +178,56 @@
         <div class="header">
             <a href="index.html" class="header-logo"></a>
             <a href="#" class="open-menu"><i class="fa fa-navicon"></i></a>
+            <a href="#" class="open-more"><i class="fa fa-envelope-o"></i></a>
         </div>
         
-        <div class="coverpage-slider" data-snap-ignore="true">                     
-            <div>
-                <div class="overlay dark-overlay"></div>
-                <div class="coverpage-image bg1 coverpage-style-1">
-                    <img style="width:150px; height:45px; left:50%; margin-left:-75px; top:50%; margin-top:-90px;" src="images/misc/logo.png">
-                    <p style="top:50%; margin-top:-30px;">
-                        Create amazingly coverpage designs, with just a simple class.
-                    </p>
-                    <a href="#" style="top:50%; margin-top:80px; left:50%; margin-left:-50px;" class="coverpage-button">Read More</a>
+        <div class="signup-page bg2">
+            <div class="signup-page-overlay"></div>
+            <div class="signup-page-wrapper">
+                <a href="#" class="signup-logo"></a>
+                <p>
+                    Create an account bellow, it's really easy! 
+                </p>
+                <input type="text" class="signup-email" value="Email">
+                <input type="text" class="signup-password" value="Password">
+                <div class="one-half">
+                    <a href="#" class="button button-green full-button">Signup</a>
+                </div>                
+                <div class="one-half last-column">
+                    <a href="pageapp-login.html" class="button button-blue full-button">Login</a>
                 </div>
-            </div>
-
-            <div>
-                <div class="overlay dark-overlay"></div>
-                <div class="coverpage-image bg2 coverpage-style-3">
-                    <i class="fa fa-clock-o" style="left:50%; top:50%; margin-top:-120px;"></i>
-                    <p style="left:50%; margin-left:-140px; top:50%; margin-top:-20px;">
-                        With simple classes, it will take you less than 10 minutes to setup the entire coverpage. 
-                    </p>
-                    <a href="#" style="top:50%; margin-top:100px; left:50%; margin-left:-50px;" class="coverpage-button">Read More</a>
+                <div class="clear"></div>
+                <div class="or-button">
+                    <em></em>
+                    <strong>or</strong>
+                    <em></em>
                 </div>
-            </div>
-
-            <div>
-                <div class="overlay dark-overlay"></div>
-                <div class="coverpage-image bg3 coverpage-style-2">
-                    <h3 style="height:180px; top:50%; margin-top:-180px;">
-                        FIND<br>
-                        THE<br>
-                        PERFECT<br>
-                        DESIGN<br>
-                    </h3>
-                    <p style="height:100px; top:50%; margin-top:20px;">
-                        Play along with the coverpage and 
-                        you'll find the perfect combination 
-                        that fits your needs.
-                    </p>
-                    <a style="top:50%; margin-top:140px; margin-left:25px;" href="#" class="coverpage-button">Read More</a>
+                
+                <div class="signup-socials">
+                    <a href="#" class="facebook"><i class="fa fa-facebook"></i>Signup with Facebook</a>
+                    <a href="#" class="twitter"><i class="fa fa-twitter"></i>Signup with Twitter</a>
+                    <a href="#" class="google"><i class="fa fa-google-plus"></i>Signup with Google Plus</a>
                 </div>
+                
             </div>            
-        </div>   
+        </div>
+   
     </div>
 </div>
 
 </body>
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
