--- a/Johnny Wallet/www/templates/gallery-round.html
+++ b/Johnny Wallet/www/templates/gallery-round.html
@@ -81,8 +81,8 @@
                     <a class="deploy-submenu active-submenu" href="#"><i class="fa fa-camera"></i>Gallery<i class="fa fa-plus"></i></a>
                     <ul class="submenu active-submenu-items">
                         <li><a href="gallery-square.html"><i class="fa fa-angle-right"></i>Square Thumbs<i class="fa fa-circle"></i></a></li>
-                        <li><a href="gallery-round.html"><i class="fa fa-angle-right"></i>Round Thumbs<i class="fa fa-circle"></i></a></li>
-                        <li><a class="active-menu" href="gallery-wide.html"><i class="fa fa-angle-right"></i>Wide Thumbs<i class="fa fa-circle"></i></a></li>
+                        <li><a class="active-menu" href="gallery-round.html"><i class="fa fa-angle-right"></i>Round Thumbs<i class="fa fa-circle"></i></a></li>
+                        <li><a href="gallery-wide.html"><i class="fa fa-angle-right"></i>Wide Thumbs<i class="fa fa-circle"></i></a></li>
                     </ul>
                 </li>                 
                 <li class="has-submenu">
@@ -112,6 +112,22 @@
                 <li><a href="page-blog.html"><i class="fa fa-pencil"></i>Blog<i class="fa fa-circle"></i></a></li>
                 <li><a href="contact.html"><i class="fa fa-envelope"></i>Contact<i class="fa fa-circle"></i></a></li>
             </ul>
+            <div class="sidebar-divider">
+                Copyright 2015. All rights reserved.
+            </div>
+        </div>
+        <div class="snap-drawer snap-drawer-right">
+            <div class="sidebar-header">
+                <a href="#"><i class="fa fa-phone"></i></a>
+                <a href="#"><i class="fa fa-comment"></i></a>
+                <a href="#"><i class="fa fa-facebook"></i></a>
+                <a href="#"><i class="fa fa-twitter"></i></a>
+                <a href="#"><i class="fa fa-times"></i></a>                
+            </div>
+            
+            <div class="sidebar-logo">
+                <a href="index.html"></a>
+            </div>
             
             <div class="sidebar-divider">
                 get social with us
@@ -150,7 +166,6 @@
                 <strong>Atention</strong>
                 <em>Released a right sidebar item</em>
             </a>
-            
             <div class="sidebar-divider">
                 Copyright 2015. All rights reserved.
             </div>
@@ -162,43 +177,33 @@
         <div class="header">
             <a href="index.html" class="header-logo"></a>
             <a href="#" class="open-menu"><i class="fa fa-navicon"></i></a>
+            <a href="#" class="open-more"><i class="fa fa-envelope-o"></i></a>
         </div>
+        
         <div class="header-clear"></div>
-        
-        <div class="portfolio-wide full-bottom">
-            <a href="images/pictures/1.jpg" class="swipebox portfolio-wide-item" title="Your caption here!">
-                <h3>Swing near the ocean</h3>
-                <p>This is a wide item, just tap it to read more</p>
-                <div class="overlay"></div>
-                <img class="responsive-image" src="images/pictures/1ww.jpg" alt="img">
-            </a>
-            <a href="images/pictures/3.jpg" class="swipebox portfolio-wide-item" title="Your caption here!">
-                <h3>City street at dawn</h3>
-                <p>This is a wide item, just tap it to read more</p>
-                <div class="overlay"></div>
-                <img class="responsive-image" src="images/pictures/3ww.jpg" alt="img">
-            </a>
-            <a href="images/pictures/3.jpg" class="swipebox portfolio-wide-item" title="Your caption here!">
-                <h3>The ocean landscape</h3>
-                <p>This is a wide item, just tap it to read more</p>
-                <div class="overlay"></div>
-                <img class="responsive-image" src="images/pictures/4ww.jpg" alt="img">
-            </a>
-            <a href="images/pictures/4.jpg" class="swipebox portfolio-wide-item" title="Your caption here!">
-                <h3>Beautiful grain field</h3>
-                <p>This is a wide item, just tap it to read more</p>
-                <div class="overlay"></div>
-                <img class="responsive-image" src="images/pictures/5ww.jpg" alt="img">
-            </a>
-            <a href="images/pictures/5.jpg" class="swipebox portfolio-wide-item" title="Your caption here!">
-                <h3>The house on the hill</h3>
-                <p>This is a wide item, just tap it to read more</p>
-                <div class="overlay"></div>
-                <img class="responsive-image" src="images/pictures/6ww.jpg" alt="img">
-            </a>
-        </div>
-        
-        <div class="content decoration"></div>
+        <div class="content">
+            <div class="container no-bottom">
+                <h4>Round touch swipe gallery!</h4>
+                <p>A gallery is essential in any template, so, if it's a mobile device, why not a touch one!</p>
+            </div>
+            <ul class="gallery round-thumb">
+                <li><a class="swipebox" href="images/pictures/1.jpg" title="An awesome gallery!"><img src="images/pictures/1s.jpg" alt="img" /></a></li>
+                <li><a class="swipebox" href="images/pictures/2.jpg" title="An awesome gallery!"><img src="images/pictures/2s.jpg" alt="img" /></a></li>
+                <li><a class="swipebox" href="images/pictures/3.jpg" title="An awesome gallery!"><img src="images/pictures/3s.jpg" alt="img" /></a></li>
+                <li><a class="swipebox" href="images/pictures/4.jpg" title="An awesome gallery!"><img src="images/pictures/4s.jpg" alt="img" /></a></li>
+                <li><a class="swipebox" href="images/pictures/5.jpg" title="An awesome gallery!"><img src="images/pictures/5s.jpg" alt="img" /></a></li>
+                <li><a class="swipebox" href="images/pictures/6.jpg" title="An awesome gallery!"><img src="images/pictures/6s.jpg" alt="img" /></a></li>
+                <li><a class="swipebox" href="images/pictures/7.jpg" title="An awesome gallery!"><img src="images/pictures/7s.jpg" alt="img" /></a></li>
+                <li><a class="swipebox" href="images/pictures/8.jpg" title="An awesome gallery!"><img src="images/pictures/8s.jpg" alt="img" /></a></li>
+                <li><a class="swipebox" href="images/pictures/1.jpg" title="An awesome gallery!"><img src="images/pictures/1s.jpg" alt="img" /></a></li>
+                <li><a class="swipebox" href="images/pictures/2.jpg" title="An awesome gallery!"><img src="images/pictures/2s.jpg" alt="img" /></a></li>
+                <li><a class="swipebox" href="images/pictures/3.jpg" title="An awesome gallery!"><img src="images/pictures/3s.jpg" alt="img" /></a></li>
+                <li><a class="swipebox" href="images/pictures/4.jpg" title="An awesome gallery!"><img src="images/pictures/4s.jpg" alt="img" /></a></li>
+            </ul>
+            
+            <div class="decoration"></div>
+            
+        </div>  
             
         <!-- Page Footer-->
         <div class="footer">
@@ -248,6 +253,7 @@
 </div>
 
 </body>
+
 
 
 
