--- a/Johnny Wallet/www/templates/page-soon.html
+++ b/Johnny Wallet/www/templates/page-soon.html
@@ -86,33 +86,48 @@
                     </ul>
                 </li>                 
                 <li class="has-submenu">
-                    <a class="deploy-submenu" href="#"><i class="fa fa-file"></i>Pages<i class="fa fa-plus"></i></a>
-                    <ul class="submenu">
+                    <a class="deploy-submenu active-submenu" href="#"><i class="fa fa-file"></i>Pages<i class="fa fa-plus"></i></a>
+                    <ul class="submenu active-submenu-items">
                         <li><a href="page-error.html"><i class="fa fa-angle-right"></i>404 Page<i class="fa fa-circle"></i></a></li>
-                        <li><a href="page-soon.html"><i class="fa fa-angle-right"></i>Soon Page<i class="fa fa-circle"></i></a></li>
+                        <li><a class="active-menu" href="page-soon.html"><i class="fa fa-angle-right"></i>Soon Page<i class="fa fa-circle"></i></a></li>
                         <li><a href="page-updates.html"><i class="fa fa-angle-right"></i>Updates Page<i class="fa fa-circle"></i></a></li>
                         <li><a href="page-timeline.html"><i class="fa fa-angle-right"></i>Timeline Page<i class="fa fa-circle"></i></a></li>
                         <li><a href="index2.html"><i class="fa fa-angle-right"></i>Home Fullscreen<i class="fa fa-circle"></i></a></li>
                     </ul>
                 </li>                
                 <li class="has-submenu">
-                    <a class="deploy-submenu active-submenu" href="#"><i class="fa fa-mobile"></i>App Specific<i class="fa fa-plus"></i></a>
-                    <ul class="submenu active-submenu-items">
+                    <a class="deploy-submenu" href="#"><i class="fa fa-mobile"></i>App Specific<i class="fa fa-plus"></i></a>
+                    <ul class="submenu">
                         <li><a href="pageapp-login.html"><i class="fa fa-angle-right"></i>Login<i class="fa fa-circle"></i></a></li>
                         <li><a href="pageapp-sigin.html"><i class="fa fa-angle-right"></i>Signup<i class="fa fa-circle"></i></a></li>
                         <li><a href="pageapp-coverpage.html"><i class="fa fa-angle-right"></i>Coverpage<i class="fa fa-circle"></i></a></li>
-                        <li><a class="active-menu" href="pageapp-userlist.html"><i class="fa fa-angle-right"></i>User List<i class="fa fa-circle"></i></a></li>
+                        <li><a href="pageapp-userlist.html"><i class="fa fa-angle-right"></i>User List<i class="fa fa-circle"></i></a></li>
                         <li><a href="pageapp-calendar.html"><i class="fa fa-angle-right"></i>Calendar<i class="fa fa-circle"></i></a></li>
                         <li><a href="pageapp-activity.html"><i class="fa fa-angle-right"></i>Activity Feed<i class="fa fa-circle"></i></a></li>
                         <li><a href="pageapp-bubbles.html"><i class="fa fa-angle-right"></i>Chat Bubbles<i class="fa fa-circle"></i></a></li>
                         <li><a href="pageapp-shareboxes.html"><i class="fa fa-angle-right"></i>Share Boxes<i class="fa fa-circle"></i></a></li>
-                        <li><a href="pageapp-toggles.html"><i class="fa fa-angle-right"></i>Content Toggles<i class="fa fa-circle"></i></a></li>
                     </ul>
                 </li>
                 <li><a href="page-video.html"><i class="fa fa-youtube-play"></i>Videos<i class="fa fa-circle"></i></a></li>
                 <li><a href="page-blog.html"><i class="fa fa-pencil"></i>Blog<i class="fa fa-circle"></i></a></li>
                 <li><a href="contact.html"><i class="fa fa-envelope"></i>Contact<i class="fa fa-circle"></i></a></li>
             </ul>
+            <div class="sidebar-divider">
+                Copyright 2015. All rights reserved.
+            </div>
+        </div>
+        <div class="snap-drawer snap-drawer-right">
+            <div class="sidebar-header">
+                <a href="#"><i class="fa fa-phone"></i></a>
+                <a href="#"><i class="fa fa-comment"></i></a>
+                <a href="#"><i class="fa fa-facebook"></i></a>
+                <a href="#"><i class="fa fa-twitter"></i></a>
+                <a href="#"><i class="fa fa-times"></i></a>                
+            </div>
+            
+            <div class="sidebar-logo">
+                <a href="index.html"></a>
+            </div>
             
             <div class="sidebar-divider">
                 get social with us
@@ -151,7 +166,6 @@
                 <strong>Atention</strong>
                 <em>Released a right sidebar item</em>
             </a>
-            
             <div class="sidebar-divider">
                 Copyright 2015. All rights reserved.
             </div>
@@ -163,172 +177,28 @@
         <div class="header">
             <a href="index.html" class="header-logo"></a>
             <a href="#" class="open-menu"><i class="fa fa-navicon"></i></a>
+            <a href="#" class="open-more"><i class="fa fa-envelope-o"></i></a>
         </div>
-        
-        <div class="header-clear"></div>        
-        <div class="content">
-            
-            <div class="container no-bottom">
-                <h3>User Lists</h3>
-                <p>
-                    User lists styled to look like those on your mobile app. You can link them to separate pages,
-                    add follow buttons or simply connect them to your social media items. It's as easy as copy pasting a class!
-                </p>
-            </div>
-            
-            <div class="decoration"></div>
-            <div class="one-third-responsive">
-                <a href="#" class="user-list-item">
-                    <img src="images/pictures/1s.jpg" alt="img">
-                    <strong>User One<br></strong>
-                    <em>United States, New York, NY </em>
-                    <i class="fa fa-chevron-right"></i>
-                </a>
-                <div class="decoration"></div>                
-                <a href="#" class="user-list-item">
-                    <img src="images/pictures/2s.jpg" alt="img">
-                    <strong>User Two<br></strong>
-                    <em>United States, New York, NY </em>
-                    <i class="fa fa-chevron-right"></i>
-                </a>
-                <div class="decoration"></div>                
-                <a href="#" class="user-list-item">
-                    <img src="images/pictures/3s.jpg" alt="img">
-                    <strong>User Three<br></strong>
-                    <em>United States, New York, NY </em>
-                    <i class="fa fa-chevron-right"></i>
-                </a>
-                <div class="decoration"></div>                
-                <a href="#" class="user-list-item">
-                    <img src="images/pictures/4s.jpg" alt="img">
-                    <strong>User Four<br></strong>
-                    <em>United States, New York, NY </em>
-                    <i class="fa fa-chevron-right"></i>
-                </a>
-                <div class="decoration"></div>
-            </div>
-            
-            
-            <div class="one-third-responsive">
-                <p class="user-list-follow">
-                    <img src="images/pictures/1s.jpg" alt="img">
-                    <strong>User One<br><em>Some sample text here.</em></strong>
-                    <a href="#" class="follow">Follow</a>
-                </p>
-                <div class="decoration"></div>                
-                <p class="user-list-follow">
-                    <img src="images/pictures/2s.jpg" alt="img">
-                    <strong>User Two<br><em>Some sample text here.</em></strong>
-                    <a href="#" class="follow">Follow</a>
-                </p>
-                <div class="decoration"></div>                
-                <p class="user-list-follow">
-                    <img src="images/pictures/3s.jpg" alt="img">
-                    <strong>User Three<br><em>Some sample text here.</em></strong>
-                    <a href="#" class="follow">Follow</a>
-                </p>
-                <div class="decoration"></div>                
-                <p class="user-list-follow">
-                    <img src="images/pictures/4s.jpg" alt="img">
-                    <strong>User Four<br><em>Some sample text here.</em></strong>
-                    <a href="#" class="follow">Follow</a>
-                </p>
-                <div class="decoration"></div>
-            </div>            
-            
-            <div class="one-third-responsive last-column">
-                <p class="user-list-socials">
-                    <img src="images/pictures/1s.jpg" alt="img">
-                    <strong>User One<br><em>User is on his socials</em></strong>
-                    <a href="#" class="icon1 facebook-color"><i class="fa fa-facebook"></i></a>
-                    <a href="#" class="icon2 twitter-color"><i class="fa fa-twitter"></i></a>
-                </p>
-                <div class="decoration"></div>                
-                <p class="user-list-socials">
-                    <img src="images/pictures/2s.jpg" alt="img">
-                    <strong>User Two<br><em>User is on his socials</em></strong>
-                    <a href="#" class="icon1 google-color"><i class="fa fa-google-plus"></i></a>
-                    <a href="#" class="icon2 facebook-color"><i class="fa fa-facebook"></i></a>
-                </p>
-                <div class="decoration"></div>                
-                <p class="user-list-socials">
-                    <img src="images/pictures/3s.jpg" alt="img">
-                    <strong>User Three<br><em>User is on his socials</em></strong>
-                    <a href="#" class="icon1 twitter-color"><i class="fa fa-twitter"></i></a>
-                    <a href="#" class="icon2 google-color"><i class="fa fa-google-plus"></i></a>
-                </p>
-                <div class="decoration"></div>                
-                <p class="user-list-socials">
-                    <img src="images/pictures/4s.jpg" alt="img">
-                    <strong>User Four<br><em>User is on his socials</em></strong>
-                    <a href="#" class="icon1 facebook-color"><i class="fa fa-facebook"></i></a>
-                    <a href="#" class="icon2 twitter-color"><i class="fa fa-twitter"></i></a>
-                </p>
-                <div class="decoration"></div>
-            </div>           
-            
-        </div>
-        
-        <!-- Page Footer-->
-        <div class="footer">
-            <div class="footer-socials half-bottom">
-                <a href="#" class="footer-facebook"><i class="fa fa-facebook"></i></a>
-                <a href="#" class="footer-twitter"><i class="fa fa-twitter"></i></a>
-                <a href="#" class="footer-google"><i class="fa fa-google-plus"></i></a>
-                <a href="#" class="footer-share show-share-bottom"><i class="fa fa-share-alt"></i></a>
-                <a href="#" class="footer-up"><i class="fa fa-angle-up"></i></a>
-            </div>
-            <p class="center-text">Copyright 2015. All rights reserved.</p>
-        </div>       
-    </div>
-    
-    <div class="share-bottom">
-        <h3>Share Page</h3>
-        <div class="share-socials-bottom">
-            <a href="https://www.facebook.com/sharer/sharer.php?u=http://www.themeforest.net/">
-                <i class="fa fa-facebook facebook-color"></i>
-                Facebook
-            </a>
-            <a href="https://twitter.com/home?status=Check%20out%20ThemeForest%20http://www.themeforest.net">
-                <i class="fa fa-twitter twitter-color"></i>
-                Twitter
-            </a>
-            <a href="https://plus.google.com/share?url=http://www.themeforest.net">
-                <i class="fa fa-google-plus google-color"></i>
-                Google
-            </a>
 
-            <a href="https://pinterest.com/pin/create/button/?url=http://www.themeforest.net/&media=https://0.s3.envato.com/files/63790821/profile-image.jpg&description=Themes%20and%20Templates">
-                <i class="fa fa-pinterest-p pinterest-color"></i>
-                Pinterest
-            </a>
-            <a href="sms:">
-                <i class="fa fa-comment-o sms-color"></i>
-                Text
-            </a>
-            <a href="mailto:?&subject=Check this page out!&body=http://www.themeforest.net">
-                <i class="fa fa-envelope-o mail-color"></i>
-                Email
-            </a>
+        
+        <div class="soon-page-wrapper">
+            <div class="soon-page">
+                <h1>Coming Soon</h1>
+                <h4>We're still working on this page!</h4>
+                <p>
+                    We're working really hard to get this page up and running as soon as possible! We have an estimate below! 
+                    
+                </p>
+                <div class="countdown"></div>
+                <a href="#" class="soon-button"><i class="fa fa-home"></i>Home</a>
+            </div>
+            <div class="overlay"></div>
         </div>
-        <a href="#" class="close-share-bottom">Close</a>
+     
     </div>
-    
 </div>
 
 </body>
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
