--- a/Johnny Wallet/www/templates/page-timeline.html
+++ b/Johnny Wallet/www/templates/page-timeline.html
@@ -86,12 +86,12 @@
                     </ul>
                 </li>                 
                 <li class="has-submenu">
-                    <a class="deploy-submenu" href="#"><i class="fa fa-file"></i>Pages<i class="fa fa-plus"></i></a>
-                    <ul class="submenu">
+                    <a class="deploy-submenu active-submenu" href="#"><i class="fa fa-file"></i>Pages<i class="fa fa-plus"></i></a>
+                    <ul class="submenu active-submenu-items">
                         <li><a href="page-error.html"><i class="fa fa-angle-right"></i>404 Page<i class="fa fa-circle"></i></a></li>
                         <li><a href="page-soon.html"><i class="fa fa-angle-right"></i>Soon Page<i class="fa fa-circle"></i></a></li>
                         <li><a href="page-updates.html"><i class="fa fa-angle-right"></i>Updates Page<i class="fa fa-circle"></i></a></li>
-                        <li><a href="page-timeline.html"><i class="fa fa-angle-right"></i>Timeline Page<i class="fa fa-circle"></i></a></li>
+                        <li><a class="active-menu" href="page-timeline.html"><i class="fa fa-angle-right"></i>Timeline Page<i class="fa fa-circle"></i></a></li>
                         <li><a href="index2.html"><i class="fa fa-angle-right"></i>Home Fullscreen<i class="fa fa-circle"></i></a></li>
                     </ul>
                 </li>                
@@ -109,9 +109,25 @@
                     </ul>
                 </li>
                 <li><a href="page-video.html"><i class="fa fa-youtube-play"></i>Videos<i class="fa fa-circle"></i></a></li>
-                <li><a class="active-menu" href="page-blog.html"><i class="fa fa-pencil"></i>Blog<i class="fa fa-circle"></i></a></li>
+                <li><a href="page-blog.html"><i class="fa fa-pencil"></i>Blog<i class="fa fa-circle"></i></a></li>
                 <li><a href="contact.html"><i class="fa fa-envelope"></i>Contact<i class="fa fa-circle"></i></a></li>
             </ul>
+            <div class="sidebar-divider">
+                Copyright 2015. All rights reserved.
+            </div>
+        </div>
+        <div class="snap-drawer snap-drawer-right">
+            <div class="sidebar-header">
+                <a href="#"><i class="fa fa-phone"></i></a>
+                <a href="#"><i class="fa fa-comment"></i></a>
+                <a href="#"><i class="fa fa-facebook"></i></a>
+                <a href="#"><i class="fa fa-twitter"></i></a>
+                <a href="#"><i class="fa fa-times"></i></a>                
+            </div>
+            
+            <div class="sidebar-logo">
+                <a href="index.html"></a>
+            </div>
             
             <div class="sidebar-divider">
                 get social with us
@@ -150,7 +166,6 @@
                 <strong>Atention</strong>
                 <em>Released a right sidebar item</em>
             </a>
-            
             <div class="sidebar-divider">
                 Copyright 2015. All rights reserved.
             </div>
@@ -162,85 +177,102 @@
         <div class="header">
             <a href="index.html" class="header-logo"></a>
             <a href="#" class="open-menu"><i class="fa fa-navicon"></i></a>
+            <a href="#" class="open-more"><i class="fa fa-envelope-o"></i></a>
         </div>
         <div class="header-clear"></div>
-            
+        
         <div class="content">
-            <div class="blog-posts">
-                <div class="blog-post">
-                    <a class="blog-post-image" href="#"><img src="images/pictures/3ww.jpg" alt="img"></a>
-                    <h3 class="blog-post-title">Blog Post Title</h3>
-                    <p class="blog-post-text">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. In aliquam est 
-                        ut volutpat auctor. Suspendisse finibus libero risus, eu vulputate velit
-                        tempor et. In eget nunc aliquam, sagittis risus vitae, pharetra enim.
-                    </p>
-                    <p class="blog-post-date"><i class="fa fa-calendar"></i>20/01/2015</p>
-                    <p class="blog-post-more"><a href="#">Read More<i class="fa fa-angle-right"></i></a></p>
-                </div>
-                <div class="decoration"></div>
-                <div class="blog-post">
-                    <a class="blog-post-image" href="#"><img src="images/pictures/5ww.jpg" alt="img"></a>
-                    <h3 class="blog-post-title">Blog Post Title</h3>
-                    <p class="blog-post-text">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. In aliquam est 
-                        ut volutpat auctor. Suspendisse finibus libero risus, eu vulputate velit
-                        tempor et. In eget nunc aliquam, sagittis risus vitae, pharetra enim.
-                    </p>
-                    <p class="blog-post-date"><i class="fa fa-calendar"></i>20/01/2015</p>
-                    <p class="blog-post-more"><a href="#">Read More<i class="fa fa-angle-right"></i></a></p>
-                </div>
+            <div class="container no-bottom">
+                <h3>Page Timeline</h3>
+                <p>
+                    Timelines are easy to use and update. Easy classes you just copy and paste. Timelines support text, images, videos, quotes,
+                    and everyother combination you can think of!
+                </p>
             </div>
-            <div class="blog-sidebar">
-                <div class="decoration hide-if-responsive"></div>
-                <div class="widget container">
-                    <h4>Looking for something?</h4>
-                    <p>
-                        An input field you can connect to your needs and use as a search field.
-                    </p>
-                    <input class="blog-search" type="text" value="Search here...">
-                </div>
-                <div class="decoration"></div>
-                <div class="widget container">
-                    <h4>Recent Works</h4>
-                    <p>
-                        You can link this to be a gallery or link it to act like a normal anchor
-                        to redirect your users to the specific post you want. 
-                    </p>
-                    <ul class="gallery square-thumb blog-gallery">
-                        <li><a href="#"><img src="images/pictures/1s.jpg" alt="img"/></a></li>
-                        <li><a href="#"><img src="images/pictures/2s.jpg" alt="img"/></a></li>
-                        <li><a href="#"><img src="images/pictures/3s.jpg" alt="img"/></a></li>
-                        <li><a href="#"><img src="images/pictures/4s.jpg" alt="img"/></a></li>
-                    </ul>
-                </div>
-                <div class="widget container">
-                    <h4>Categories</h4>
-                    <p>
-                        Your categories styled up to look nice and clean!
-                    </p>
-                    <div class="one-half">
-                        <ul class="blog-category">
-                            <li><a href="#"><i class="fa fa-angle-right"></i>Category 1</a></li>
-                            <li><a href="#"><i class="fa fa-angle-right"></i>Category 2</a></li>
-                            <li><a href="#"><i class="fa fa-angle-right"></i>Category 3</a></li>
-                            <li><a href="#"><i class="fa fa-angle-right"></i>Category 4</a></li>
-                        </ul>
+            
+            <div class="decoration"></div>
+            
+            <div class="timeline">
+                <div class="timeline-decoration" style="height:96%;"></div>
+                <div class="timeline-item">
+                    <div class="timeline-icon">
+                        <i class="fa fa-pencil"></i>
                     </div>
-                    <div class="one-half last-column">
-                        <ul class="blog-category">
-                            <li><a href="#"><i class="fa fa-angle-right"></i>Category 1</a></li>
-                            <li><a href="#"><i class="fa fa-angle-right"></i>Category 2</a></li>
-                            <li><a href="#"><i class="fa fa-angle-right"></i>Category 3</a></li>
-                            <li><a href="#"><i class="fa fa-angle-right"></i>Category 4</a></li>
-                        </ul>
+                    <div class="timeline-text">
+                        <h3 class="title">Text Timeline</h3>
+                        <em class="subtitle">A timeline text post</em>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                            Donec blandit faucibus suscipit. Donec vestibulum erat 
+                            in nunc tempor, eget ornare arcu. 
+                        </p>
                     </div>
-                    <div class="clear"></div>
                 </div>
-            </div>
+                <div class="timeline-item">
+                    <div class="timeline-icon">
+                        <i class="fa fa-camera"></i>
+                    </div>
+                    <div class="timeline-text">
+                        <h3 class="title">Image Timeline</h3>
+                        <em class="subtitle">A timeline image post</em>
+                        <img src="images/pictures/5ww.jpg" alt="img" class="responsive-image">
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                            Donec blandit faucibus suscipit. Donec vestibulum erat 
+                            in nunc tempor, eget ornare arcu. 
+                        </p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-icon">
+                        <i class="fa fa-vimeo-square"></i>
+                    </div>
+                    <div class="timeline-text">
+                        <h3 class="title">Video Timeline</h3>
+                        <em class="subtitle">A timeline video post</em>
+                        <iframe class="responsive-video" src="http://player.vimeo.com/video/7449107"></iframe>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                            Donec blandit faucibus suscipit. Donec vestibulum erat 
+                            in nunc tempor, eget ornare arcu. 
+                        </p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-icon">
+                        <i class="fa fa-youtube-play"></i>
+                    </div>
+                    <div class="timeline-text">
+                        <h3 class="title">Video Timeline</h3>
+                        <em class="subtitle">A timeline video post</em>
+                        <iframe class="responsive-video" src="http://www.youtube.com/embed/9S-RHXlsjyY"></iframe>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                            Donec blandit faucibus suscipit. Donec vestibulum erat 
+                            in nunc tempor, eget ornare arcu. 
+                        </p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-icon">
+                        <i class="fa fa-quote-left"></i>
+                    </div>
+                    <div class="timeline-text timeline-quote no-bottom">
+                        <h3 class="title">This is an amazing template, thanks for sharing! My mobile looks awesome now!</h3>
+                        <a href="#" class="subtitle">John Doe, ThemeForest Buyer</a>
+                    </div>
+                </div>
+                <div class="timeline-item timeline-ending">
+                    <div class="timeline-icon">
+                        <i class="fa fa-times"></i>
+                    </div>
+                    <div class="timeline-text timeline-quote no-bottom">
+                        <h3 class="title">Our timeline events end here, but check uot the top part for news!</h3>
+                    </div>
+                </div>
+            </div>    
             <div class="decoration"></div>
         </div>
-        
         <!-- Page Footer-->
         <div class="footer">
             <div class="footer-socials half-bottom">
