--- a/Johnny Wallet/www/templates/page-updates.html
+++ b/Johnny Wallet/www/templates/page-updates.html
@@ -62,11 +62,11 @@
             <ul class="sidebar-navigation">
                 <li><a href="index.html"><i class="fa fa-home"></i>Home<i class="fa fa-circle"></i></a></li>
                 <li class="has-submenu">
-                    <a class="deploy-submenu active-submenu" href="#"><i class="fa fa-cog"></i>Features<i class="fa fa-plus"></i></a>
-                    <ul class="submenu active-submenu-items">
+                    <a class="deploy-submenu" href="#"><i class="fa fa-cog"></i>Features<i class="fa fa-plus"></i></a>
+                    <ul class="submenu">
                         <li><a href="features-type.html"><i class="fa fa-angle-right"></i>Type<i class="fa fa-circle"></i></a></li>
                         <li><a href="features-jquery.html"><i class="fa fa-angle-right"></i>jQuery<i class="fa fa-circle"></i></a></li>
-                        <li><a class="active-menu" href="features-others.html"><i class="fa fa-angle-right"></i>Others<i class="fa fa-circle"></i></a></li>
+                        <li><a href="features-others.html"><i class="fa fa-angle-right"></i>Others<i class="fa fa-circle"></i></a></li>
                     </ul>
                 </li>
                 <li class="has-submenu">
@@ -86,11 +86,11 @@
                     </ul>
                 </li>                 
                 <li class="has-submenu">
-                    <a class="deploy-submenu" href="#"><i class="fa fa-file"></i>Pages<i class="fa fa-plus"></i></a>
-                    <ul class="submenu">
+                    <a class="deploy-submenu active-submenu" href="#"><i class="fa fa-file"></i>Pages<i class="fa fa-plus"></i></a>
+                    <ul class="submenu active-submenu-items">
                         <li><a href="page-error.html"><i class="fa fa-angle-right"></i>404 Page<i class="fa fa-circle"></i></a></li>
                         <li><a href="page-soon.html"><i class="fa fa-angle-right"></i>Soon Page<i class="fa fa-circle"></i></a></li>
-                        <li><a href="page-updates.html"><i class="fa fa-angle-right"></i>Updates Page<i class="fa fa-circle"></i></a></li>
+                        <li><a class="active-menu" href="page-updates.html"><i class="fa fa-angle-right"></i>Updates Page<i class="fa fa-circle"></i></a></li>
                         <li><a href="page-timeline.html"><i class="fa fa-angle-right"></i>Timeline Page<i class="fa fa-circle"></i></a></li>
                         <li><a href="index2.html"><i class="fa fa-angle-right"></i>Home Fullscreen<i class="fa fa-circle"></i></a></li>
                     </ul>
@@ -112,6 +112,22 @@
                 <li><a href="page-blog.html"><i class="fa fa-pencil"></i>Blog<i class="fa fa-circle"></i></a></li>
                 <li><a href="contact.html"><i class="fa fa-envelope"></i>Contact<i class="fa fa-circle"></i></a></li>
             </ul>
+            <div class="sidebar-divider">
+                Copyright 2015. All rights reserved.
+            </div>
+        </div>
+        <div class="snap-drawer snap-drawer-right">
+            <div class="sidebar-header">
+                <a href="#"><i class="fa fa-phone"></i></a>
+                <a href="#"><i class="fa fa-comment"></i></a>
+                <a href="#"><i class="fa fa-facebook"></i></a>
+                <a href="#"><i class="fa fa-twitter"></i></a>
+                <a href="#"><i class="fa fa-times"></i></a>                
+            </div>
+            
+            <div class="sidebar-logo">
+                <a href="index.html"></a>
+            </div>
             
             <div class="sidebar-divider">
                 get social with us
@@ -150,7 +166,6 @@
                 <strong>Atention</strong>
                 <em>Released a right sidebar item</em>
             </a>
-            
             <div class="sidebar-divider">
                 Copyright 2015. All rights reserved.
             </div>
@@ -162,192 +177,97 @@
         <div class="header">
             <a href="index.html" class="header-logo"></a>
             <a href="#" class="open-menu"><i class="fa fa-navicon"></i></a>
+            <a href="#" class="open-more"><i class="fa fa-envelope-o"></i></a>
         </div>
-        
         <div class="header-clear"></div>
+        
         <div class="content">
-             <div class="container no-bottom">
-                <h3>Other Features</h3>
-                <p>
-                    Features that are vital to any template, easy to use and copy paste code. You can just copy and paste these features
-                    into boxes or into repsonsive boxes! 
-                </p>
-            </div>
             
-            <div class="decoration"></div>
-            
-            <div class="container no-bottom">  
-                <div class="one-third-responsive full-bottom">
-                    <h3>Simple Buttons</h3>
-                    <p>Pure CSS3 buttons made with just one line of code are awesome! Flat, minimal, and perfect!</p>
-                    <a href="#" class="button button-red">Button</a>
-                    <a href="#" class="button button-green">Button</a>
-                    <a href="#" class="button button-blue">Button</a>
-                    <a href="#" class="button button-magenta">Button</a>
-                    <a href="#" class="button button-tea">Button</a>
-                    <a href="#" class="button button-yellow">Button</a>
-                    <a href="#" class="button button-orange">Button</a>
-                    <a href="#" class="button button-light">Button</a>
-                    <a href="#" class="button button-grey">Button</a>  
-                    <a href="#" class="button button-dark">Button</a>  
-                    <a href="#" class="button button-red">Button</a>
-                    <a href="#" class="button button-green">Button</a>           
-                </div>
-                <div class="decoration hide-if-responsive"></div>
-                <div class="one-third-responsive full-bottom">
-                    <h3>3D Buttons</h3>
-                    <p>Pure CSS3 buttons made with just one line of code are awesome! Flat, minimal, and perfect!</p>
-                    <a href="#" class="button-3d button-red red-3d">Button</a>
-                    <a href="#" class="button-3d button-green green-3d">Button</a>
-                    <a href="#" class="button-3d button-blue blue-3d">Button</a>
-                    <a href="#" class="button-3d button-magenta magenta-3d">Button</a>
-                    <a href="#" class="button-3d button-tea tea-3d">Button</a>
-                    <a href="#" class="button-3d button-yellow yellow-3d">Button</a>
-                    <a href="#" class="button-3d button-orange orange-3d">Button</a>
-                    <a href="#" class="button-3d button-light light-3d">Button</a>
-                    <a href="#" class="button-3d button-grey grey-3d">Button</a>    
-                    <a href="#" class="button-3d button-dark dark-3d">Button</a>  
-                    <a href="#" class="button-3d button-red red-3d">Button</a>
-                    <a href="#" class="button-3d button-green green-3d">Button</a> 
-                </div>
-                <div class="decoration hide-if-responsive"></div>
-                <div class="one-third-responsive last-column full-bottom">
-                    <h3>Font Awesome Buttons</h3>
-                    <p>Pure CSS3 buttons made with just one line of code are awesome! Flat, minimal, and perfect!</p>
-                    <a href="#" class="button button-red"><i class="fa fa-navicon"></i>Button</a>
-                    <a href="#" class="button button-green"><i class="fa fa-life-saver"></i>Button</a>
-                    <a href="#" class="button button-blue"><i class="fa fa-paw"></i>Button</a>
-                    <a href="#" class="button button-magenta"><i class="fa fa-camera"></i>Button</a>
-                    <a href="#" class="button button-tea"><i class="fa fa-cog"></i>Button</a>
-                    <a href="#" class="button button-yellow"><i class="fa fa-picture-o"></i>Button</a>
-                    <a href="#" class="button button-orange"><i class="fa fa-question"></i>Button</a>
-                    <a href="#" class="button button-light"><i class="fa fa-exclamation"></i>Button</a>
-                    <a href="#" class="button button-grey"><i class="fa fa-angle-right"></i>Button</a>         
-
-                </div>
-            </div>
-
-            <div class="decoration"></div>
-
-            <div class="one-half-responsive">
-                <h3>Speach bubbles?</h3>
-                <p>
-                    A nice way of showing off a conversation maybe?
-                    It's absolutely simple to create them and use them!
-                </p>
-
-                <em class="speach-left-title">John Doe says:</em>
-                <p class="speach-left">This is just an awesome bubble! It's quite cute isn't it?</p>
-
-                <div class="clear"></div>
-
-                <em class="speach-right-title">Jane Doe replied:</em>
-                <p class="speach-right blue-bubble">Yeap! It's awesome isn't it and it's not that hard to use! And they act like bubbles, only expanding to 75% of width!</p>
-
-                <div class="clear"></div>  
-
-                <em class="speach-left-title">John Doe says:</em>
-                <p class="speach-left">Awesome stuff!</p> 
-
-                <div class="clear"></div>
-
-                <em class="speach-right-title">Jane Doe replied:</em>
-                <p class="speach-right blue-bubble">Yeap! It's awesome isn't it and it's not that hard to use! And they act like bubbles, only expanding to 75% of width!</p>
-            </div> 
-
-            <div class="decoration hide-if-responsive"></div>
-
-            <div class="one-half-responsive last-column">
-                <h3>Speach bubbles?</h3>
-                <p>
-                    A nice way of showing off a conversation maybe?
-                    It's absolutely simple to create them and use them!
-                </p>
-
-                <em class="speach-left-title">John Doe says:</em>
-                <p class="speach-left">This is just an awesome bubble! It's quite cute isn't it?</p>
-
-                <div class="clear"></div>
-
-                <em class="speach-right-title">Jane Doe replied:</em>
-                <p class="speach-right green-bubble">Yeap! It's awesome isn't it and it's not that hard to use! And they act like bubbles, only expanding to 75% of width!</p>
-
-                <div class="clear"></div>  
-
-                <em class="speach-left-title">John Doe says:</em>
-                <p class="speach-left">Awesome stuff!</p> 
-
-                <div class="clear"></div>
-
-                <em class="speach-right-title">Jane Doe replied:</em>
-                <p class="speach-right green-bubble">Yeap! It's awesome isn't it and it's not that hard to use! And they act like bubbles, only expanding to 75% of width!</p>
-            </div> 
-
-            <div class="decoration"></div>
             <div class="container no-bottom">
-                <h4>Device detection</h4>
-                <p>A simple way to detect devices! When visiting from a mobile, only the one detected will appear!</p>
-                <div class="one-half-responsive">
-                    <div class="android-detected">
-                        <div class="detected-wrapper">
-                            <img class="detected-image" src="images/detector/android.png" alt="img">
-                            <h4>Get it on Google Play</h4>
-                            <em>For your Android Device</em>
-                            <p>
-                                This is a demo box, included in the template, but you can detect Androids
-                                and add whatever text or element appear for that platform only!
-                            </p>
-                            <a href="#" class="button center-button button-dark full-bottom detected-button">Button</a>
-                        </div>
-                    </div>
-                    <div class="decoration hide-if-responsive"></div>
-                    <div class="ipod-detected">
-                        <div class="detected-wrapper">
-                            <img class="detected-image" src="images/detector/appstore.png" alt="img">
-                            <h4>Get it on the Appstore</h4>
-                            <em>For your iPod Touch</em>
-                            <p>
-                                This is a demo box, included in the template, but you can detect Androids
-                                and add whatever text or element appear for that platform only!
-                            </p>
-                            <a href="#" class="button center-button button-blue full-bottom detected-button">Button</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="decoration hide-if-responsive"></div>
-                <div class="one-half-responsive last-column">
-                    <div class="ipad-detected">
-                        <div class="detected-wrapper">
-                            <img class="detected-image" src="images/detector/appstore.png" alt="img">
-                            <h4>Get it on the Appstore</h4>
-                            <em>For your iPad / iPad Mini</em>
-                            <p>
-                                This is a demo box, included in the template, but you can detect Androids
-                                and add whatever text or element appear for that platform only!
-                            </p>
-                            <a href="#" class="button center-button button-red full-bottom detected-button">Button</a>
-                        </div>
-                    </div>
-                    <div class="decoration hide-if-responsive"></div>
-                    <div class="iphone-detected">
-                        <div class="detected-wrapper">
-                            <img class="detected-image" src="images/detector/appstore.png" alt="img">
-                            <h4>Get it on the Appstore</h4>
-                            <em>For your iPhone</em>
-                            <p>
-                                This is a demo box, included in the template, but you can detect Androids
-                                and add whatever text or element appear for that platform only!
-                            </p>
-                            <a href="#" class="button center-button button-green full-bottom detected-button">Button</a>
-                        </div>
-                    </div>  
-                </div>
-            </div>            
+                <h3>Page Updates</h3>
+                <p>
+                    You can add everything you want on this page regarding all sorts of updates to your page and news
+                    regarding changes and what not! You can update it very easily! 
+                </p>
+            </div>
             
             <div class="decoration"></div>
             
-        </div>
-            
+            <div class="notification-page">
+                <p class="notification-page-item">
+                    <img src="images/pictures/1s.jpg" alt="img">
+                    <em>
+                        Site outage for server update. More updates soon. Tap read more for further information.
+                    </em>
+                    <a href="#">Read More</a>
+                    <a href="#">15th July 2016</a>
+                </p>
+                <div class="decoration hide-if-responsive"></div>
+                <p class="notification-page-item">
+                    <i class="fa fa-facebook" style="background-color:#3B5998;"></i>
+                    <em>
+                        We just launched a Facebook page, for news and updates, go ahead and like our page.
+                    </em>
+                    <a href="#">Like our Page</a>
+                    <a href="#">15th July 2016</a>
+                </p>
+                <div class="decoration"></div>
+                <p class="notification-page-item">
+                    <i class="fa fa-twitter" style="background-color:#40BBFF;"></i>
+                    <em>
+                        We've just reached 50.000 followers on twitter! Follow our twitter for the latest news!
+                    </em>
+                    <a href="#">Follow on Twitter</a>
+                    <a href="#">15th July 2016</a>
+                </p>  
+                <div class="decoration hide-if-responsive"></div> 
+                <p class="notification-page-item">
+                    <i class="fa fa-exclamation red-notification"></i>
+                    <em>
+                        Important notifications here! Just a simple class, copy and paste it and you're ready!
+                    </em>
+                    <a href="#">Follow on Twitter</a>
+                    <a href="#">15th July 2016</a>
+                </p>  
+                <div class="decoration"></div>   
+                <p class="notification-page-item">
+                    <i class="fa fa-check green-notification"></i>
+                    <em>
+                        Important notifications here! Just a simple class, copy and paste it and you're ready!
+                    </em>
+                    <a href="#">Follow on Twitter</a>
+                    <a href="#">15th July 2016</a>
+                </p>  
+                <div class="decoration hide-if-responsive"></div>  
+                <p class="notification-page-item">
+                    <i class="fa fa-warning yellow-notification"></i>
+                    <em>
+                        Important notifications here! Just a simple class, copy and paste it and you're ready!
+                    </em>
+                    <a href="#">Follow on Twitter</a>
+                    <a href="#">15th July 2016</a>
+                </p>  
+                <div class="decoration"></div>      
+                <p class="notification-page-item">
+                    <i class="fa fa-info blue-notification"></i>
+                    <em>
+                        Important notifications here! Just a simple class, copy and paste it and you're ready!
+                    </em>
+                    <a href="#">Follow on Twitter</a>
+                    <a href="#">15th July 2016</a>
+                </p>  
+                <div class="decoration hide-if-responsive"></div>   
+                <p class="notification-page-item">
+                    <img src="images/pictures/3s.jpg" alt="img">
+                    <em>
+                        You can also use all kinds of images and icons to express your notifications better!
+                    </em>
+                    <a href="#">Read More</a>
+                    <a href="#">15th July 2016</a>
+                </p>
+                <div class="decoration"></div>
+            </div>         
+        </div>     
         <!-- Page Footer-->
         <div class="footer">
             <div class="footer-socials half-bottom">
