--- a/Johnny Wallet/www/templates/pageapp-activity.html
+++ b/Johnny Wallet/www/templates/pageapp-activity.html
@@ -78,9 +78,9 @@
                     </ul>
                 </li>                 
                 <li class="has-submenu">
-                    <a class="deploy-submenu active-submenu" href="#"><i class="fa fa-camera"></i>Gallery<i class="fa fa-plus"></i></a>
-                    <ul class="submenu active-submenu-items">
-                        <li><a class="active-menu" href="gallery-square.html"><i class="fa fa-angle-right"></i>Square Thumbs<i class="fa fa-circle"></i></a></li>
+                    <a class="deploy-submenu" href="#"><i class="fa fa-camera"></i>Gallery<i class="fa fa-plus"></i></a>
+                    <ul class="submenu">
+                        <li><a href="gallery-square.html"><i class="fa fa-angle-right"></i>Square Thumbs<i class="fa fa-circle"></i></a></li>
                         <li><a href="gallery-round.html"><i class="fa fa-angle-right"></i>Round Thumbs<i class="fa fa-circle"></i></a></li>
                         <li><a href="gallery-wide.html"><i class="fa fa-angle-right"></i>Wide Thumbs<i class="fa fa-circle"></i></a></li>
                     </ul>
@@ -96,22 +96,39 @@
                     </ul>
                 </li>                
                 <li class="has-submenu">
-                    <a class="deploy-submenu" href="#"><i class="fa fa-mobile"></i>App Specific<i class="fa fa-plus"></i></a>
-                    <ul class="submenu">
+                    <a class="deploy-submenu active-submenu" href="#"><i class="fa fa-mobile"></i>App Specific<i class="fa fa-plus"></i></a>
+                    <ul class="submenu active-submenu-items">
                         <li><a href="pageapp-login.html"><i class="fa fa-angle-right"></i>Login<i class="fa fa-circle"></i></a></li>
                         <li><a href="pageapp-sigin.html"><i class="fa fa-angle-right"></i>Signup<i class="fa fa-circle"></i></a></li>
                         <li><a href="pageapp-coverpage.html"><i class="fa fa-angle-right"></i>Coverpage<i class="fa fa-circle"></i></a></li>
                         <li><a href="pageapp-userlist.html"><i class="fa fa-angle-right"></i>User List<i class="fa fa-circle"></i></a></li>
                         <li><a href="pageapp-calendar.html"><i class="fa fa-angle-right"></i>Calendar<i class="fa fa-circle"></i></a></li>
-                        <li><a href="pageapp-activity.html"><i class="fa fa-angle-right"></i>Activity Feed<i class="fa fa-circle"></i></a></li>
+                        <li><a class="active-menu" href="pageapp-activity.html"><i class="fa fa-angle-right"></i>Activity Feed<i class="fa fa-circle"></i></a></li>
                         <li><a href="pageapp-bubbles.html"><i class="fa fa-angle-right"></i>Chat Bubbles<i class="fa fa-circle"></i></a></li>
                         <li><a href="pageapp-shareboxes.html"><i class="fa fa-angle-right"></i>Share Boxes<i class="fa fa-circle"></i></a></li>
+                        <li><a href="pageapp-toggles.html"><i class="fa fa-angle-right"></i>Content Toggles<i class="fa fa-circle"></i></a></li>
                     </ul>
                 </li>
                 <li><a href="page-video.html"><i class="fa fa-youtube-play"></i>Videos<i class="fa fa-circle"></i></a></li>
                 <li><a href="page-blog.html"><i class="fa fa-pencil"></i>Blog<i class="fa fa-circle"></i></a></li>
                 <li><a href="contact.html"><i class="fa fa-envelope"></i>Contact<i class="fa fa-circle"></i></a></li>
             </ul>
+            <div class="sidebar-divider">
+                Copyright 2015. All rights reserved.
+            </div>
+        </div>
+        <div class="snap-drawer snap-drawer-right">
+            <div class="sidebar-header">
+                <a href="#"><i class="fa fa-phone"></i></a>
+                <a href="#"><i class="fa fa-comment"></i></a>
+                <a href="#"><i class="fa fa-facebook"></i></a>
+                <a href="#"><i class="fa fa-twitter"></i></a>
+                <a href="#"><i class="fa fa-times"></i></a>                
+            </div>
+            
+            <div class="sidebar-logo">
+                <a href="index.html"></a>
+            </div>
             
             <div class="sidebar-divider">
                 get social with us
@@ -150,7 +167,6 @@
                 <strong>Atention</strong>
                 <em>Released a right sidebar item</em>
             </a>
-            
             <div class="sidebar-divider">
                 Copyright 2015. All rights reserved.
             </div>
@@ -162,33 +178,95 @@
         <div class="header">
             <a href="index.html" class="header-logo"></a>
             <a href="#" class="open-menu"><i class="fa fa-navicon"></i></a>
+            <a href="#" class="open-more"><i class="fa fa-envelope-o"></i></a>
         </div>
-        
         <div class="header-clear"></div>
         <div class="content">
             <div class="container no-bottom">
-                <h4>Square touch swipe gallery!</h4>
-                <p>A gallery is essential in any template, so, if it's a mobile device, why not a touch one!</p>
+                <h3>Activity Feed</h3>
+                <p>
+                    You can add everything you want on this page regarding all sorts of updates to your page and news
+                    regarding changes and what not! You can update it very easily! 
+                </p>
             </div>
-            <ul class="gallery square-thumb">
-                <li><a class="swipebox" href="images/pictures/1.jpg" title="An awesome gallery!"><img src="images/pictures/1s.jpg" alt="img" /></a></li>
-                <li><a class="swipebox" href="images/pictures/2.jpg" title="An awesome gallery!"><img src="images/pictures/2s.jpg" alt="img" /></a></li>
-                <li><a class="swipebox" href="images/pictures/3.jpg" title="An awesome gallery!"><img src="images/pictures/3s.jpg" alt="img" /></a></li>
-                <li><a class="swipebox" href="images/pictures/4.jpg" title="An awesome gallery!"><img src="images/pictures/4s.jpg" alt="img" /></a></li>
-                <li><a class="swipebox" href="images/pictures/5.jpg" title="An awesome gallery!"><img src="images/pictures/5s.jpg" alt="img" /></a></li>
-                <li><a class="swipebox" href="images/pictures/6.jpg" title="An awesome gallery!"><img src="images/pictures/6s.jpg" alt="img" /></a></li>
-                <li><a class="swipebox" href="images/pictures/7.jpg" title="An awesome gallery!"><img src="images/pictures/7s.jpg" alt="img" /></a></li>
-                <li><a class="swipebox" href="images/pictures/8.jpg" title="An awesome gallery!"><img src="images/pictures/8s.jpg" alt="img" /></a></li>
-                <li><a class="swipebox" href="images/pictures/1.jpg" title="An awesome gallery!"><img src="images/pictures/1s.jpg" alt="img" /></a></li>
-                <li><a class="swipebox" href="images/pictures/2.jpg" title="An awesome gallery!"><img src="images/pictures/2s.jpg" alt="img" /></a></li>
-                <li><a class="swipebox" href="images/pictures/3.jpg" title="An awesome gallery!"><img src="images/pictures/3s.jpg" alt="img" /></a></li>
-                <li><a class="swipebox" href="images/pictures/4.jpg" title="An awesome gallery!"><img src="images/pictures/4s.jpg" alt="img" /></a></li>
-            </ul>
-            
             <div class="decoration"></div>
-            
-        </div>  
-            
+            <div class="notification-page">
+                <p class="notification-page-item">
+                    <img src="images/pictures/1s.jpg" alt="img">
+                    <em>
+                        Site outage for server update. More updates soon. Tap read more for further information.
+                    </em>
+                    <a href="#">Read More</a>
+                    <a href="#">15th July 2016</a>
+                </p>
+                <div class="decoration hide-if-responsive"></div>
+                <p class="notification-page-item">
+                    <i class="fa fa-facebook" style="background-color:#3B5998;"></i>
+                    <em>
+                        We just launched a Facebook page, for news and updates, go ahead and like our page.
+                    </em>
+                    <a href="#">Like our Page</a>
+                    <a href="#">15th July 2016</a>
+                </p>
+                <div class="decoration"></div>
+                <p class="notification-page-item">
+                    <i class="fa fa-twitter" style="background-color:#40BBFF;"></i>
+                    <em>
+                        We've just reached 50.000 followers on twitter! Follow our twitter for the latest news!
+                    </em>
+                    <a href="#">Follow on Twitter</a>
+                    <a href="#">15th July 2016</a>
+                </p>  
+                <div class="decoration hide-if-responsive"></div> 
+                <p class="notification-page-item">
+                    <i class="fa fa-exclamation red-notification"></i>
+                    <em>
+                        Important notifications here! Just a simple class, copy and paste it and you're ready!
+                    </em>
+                    <a href="#">Follow on Twitter</a>
+                    <a href="#">15th July 2016</a>
+                </p>  
+                <div class="decoration"></div>   
+                <p class="notification-page-item">
+                    <i class="fa fa-check green-notification"></i>
+                    <em>
+                        Important notifications here! Just a simple class, copy and paste it and you're ready!
+                    </em>
+                    <a href="#">Follow on Twitter</a>
+                    <a href="#">15th July 2016</a>
+                </p>  
+                <div class="decoration hide-if-responsive"></div>  
+                <p class="notification-page-item">
+                    <i class="fa fa-warning yellow-notification"></i>
+                    <em>
+                        Important notifications here! Just a simple class, copy and paste it and you're ready!
+                    </em>
+                    <a href="#">Follow on Twitter</a>
+                    <a href="#">15th July 2016</a>
+                </p>  
+                <div class="decoration"></div>      
+                <p class="notification-page-item">
+                    <i class="fa fa-info blue-notification"></i>
+                    <em>
+                        Important notifications here! Just a simple class, copy and paste it and you're ready!
+                    </em>
+                    <a href="#">Follow on Twitter</a>
+                    <a href="#">15th July 2016</a>
+                </p>  
+                <div class="decoration hide-if-responsive"></div>   
+                <p class="notification-page-item">
+                    <img src="images/pictures/3s.jpg" alt="img">
+                    <em>
+                        You can also use all kinds of images and icons to express your notifications better!
+                    </em>
+                    <a href="#">Read More</a>
+                    <a href="#">15th July 2016</a>
+                </p>
+                <div class="decoration"></div>
+            </div>       
+        </div>
+        
+
         <!-- Page Footer-->
         <div class="footer">
             <div class="footer-socials half-bottom">
@@ -237,6 +315,18 @@
 </div>
 
 </body>
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
