--- a/Johnny Wallet/www/templates/pageapp-coverpage.html
+++ b/Johnny Wallet/www/templates/pageapp-coverpage.html
@@ -86,32 +86,49 @@
                     </ul>
                 </li>                 
                 <li class="has-submenu">
-                    <a class="deploy-submenu active-submenu" href="#"><i class="fa fa-file"></i>Pages<i class="fa fa-plus"></i></a>
-                    <ul class="submenu active-submenu-items">
+                    <a class="deploy-submenu" href="#"><i class="fa fa-file"></i>Pages<i class="fa fa-plus"></i></a>
+                    <ul class="submenu">
                         <li><a href="page-error.html"><i class="fa fa-angle-right"></i>404 Page<i class="fa fa-circle"></i></a></li>
                         <li><a href="page-soon.html"><i class="fa fa-angle-right"></i>Soon Page<i class="fa fa-circle"></i></a></li>
-                        <li><a class="active-menu" href="page-updates.html"><i class="fa fa-angle-right"></i>Updates Page<i class="fa fa-circle"></i></a></li>
+                        <li><a href="page-updates.html"><i class="fa fa-angle-right"></i>Updates Page<i class="fa fa-circle"></i></a></li>
                         <li><a href="page-timeline.html"><i class="fa fa-angle-right"></i>Timeline Page<i class="fa fa-circle"></i></a></li>
                         <li><a href="index2.html"><i class="fa fa-angle-right"></i>Home Fullscreen<i class="fa fa-circle"></i></a></li>
                     </ul>
                 </li>                
                 <li class="has-submenu">
-                    <a class="deploy-submenu" href="#"><i class="fa fa-mobile"></i>App Specific<i class="fa fa-plus"></i></a>
-                    <ul class="submenu">
+                    <a class="deploy-submenu active-submenu" href="#"><i class="fa fa-mobile"></i>App Specific<i class="fa fa-plus"></i></a>
+                    <ul class="submenu active-submenu-items">
                         <li><a href="pageapp-login.html"><i class="fa fa-angle-right"></i>Login<i class="fa fa-circle"></i></a></li>
                         <li><a href="pageapp-sigin.html"><i class="fa fa-angle-right"></i>Signup<i class="fa fa-circle"></i></a></li>
-                        <li><a href="pageapp-coverpage.html"><i class="fa fa-angle-right"></i>Coverpage<i class="fa fa-circle"></i></a></li>
+                        <li><a class="active-menu" href="pageapp-coverpage.html"><i class="fa fa-angle-right"></i>Coverpage<i class="fa fa-circle"></i></a></li>
                         <li><a href="pageapp-userlist.html"><i class="fa fa-angle-right"></i>User List<i class="fa fa-circle"></i></a></li>
                         <li><a href="pageapp-calendar.html"><i class="fa fa-angle-right"></i>Calendar<i class="fa fa-circle"></i></a></li>
                         <li><a href="pageapp-activity.html"><i class="fa fa-angle-right"></i>Activity Feed<i class="fa fa-circle"></i></a></li>
                         <li><a href="pageapp-bubbles.html"><i class="fa fa-angle-right"></i>Chat Bubbles<i class="fa fa-circle"></i></a></li>
                         <li><a href="pageapp-shareboxes.html"><i class="fa fa-angle-right"></i>Share Boxes<i class="fa fa-circle"></i></a></li>
+                        <li><a href="pageapp-toggles.html"><i class="fa fa-angle-right"></i>Content Toggles<i class="fa fa-circle"></i></a></li>
                     </ul>
                 </li>
                 <li><a href="page-video.html"><i class="fa fa-youtube-play"></i>Videos<i class="fa fa-circle"></i></a></li>
                 <li><a href="page-blog.html"><i class="fa fa-pencil"></i>Blog<i class="fa fa-circle"></i></a></li>
                 <li><a href="contact.html"><i class="fa fa-envelope"></i>Contact<i class="fa fa-circle"></i></a></li>
             </ul>
+            <div class="sidebar-divider">
+                Copyright 2015. All rights reserved.
+            </div>
+        </div>
+        <div class="snap-drawer snap-drawer-right">
+            <div class="sidebar-header">
+                <a href="#"><i class="fa fa-phone"></i></a>
+                <a href="#"><i class="fa fa-comment"></i></a>
+                <a href="#"><i class="fa fa-facebook"></i></a>
+                <a href="#"><i class="fa fa-twitter"></i></a>
+                <a href="#"><i class="fa fa-times"></i></a>                
+            </div>
+            
+            <div class="sidebar-logo">
+                <a href="index.html"></a>
+            </div>
             
             <div class="sidebar-divider">
                 get social with us
@@ -150,7 +167,6 @@
                 <strong>Atention</strong>
                 <em>Released a right sidebar item</em>
             </a>
-            
             <div class="sidebar-divider">
                 Copyright 2015. All rights reserved.
             </div>
@@ -162,156 +178,54 @@
         <div class="header">
             <a href="index.html" class="header-logo"></a>
             <a href="#" class="open-menu"><i class="fa fa-navicon"></i></a>
+            <a href="#" class="open-more"><i class="fa fa-envelope-o"></i></a>
         </div>
-        <div class="header-clear"></div>
         
-        <div class="content">
-            
-            <div class="container no-bottom">
-                <h3>Page Updates</h3>
-                <p>
-                    You can add everything you want on this page regarding all sorts of updates to your page and news
-                    regarding changes and what not! You can update it very easily! 
-                </p>
+        <div class="coverpage-slider" data-snap-ignore="true">                     
+            <div>
+                <div class="overlay dark-overlay"></div>
+                <div class="coverpage-image bg1 coverpage-style-1">
+                    <img style="width:150px; height:45px; left:50%; margin-left:-75px; top:50%; margin-top:-90px;" src="images/misc/logo.png">
+                    <p style="top:50%; margin-top:-30px;">
+                        Create amazingly coverpage designs, with just a simple class.
+                    </p>
+                    <a href="#" style="top:50%; margin-top:80px; left:50%; margin-left:-50px;" class="coverpage-button">Read More</a>
+                </div>
             </div>
-            
-            <div class="decoration"></div>
-            
-            <div class="notification-page">
-                <p class="notification-page-item">
-                    <img src="images/pictures/1s.jpg" alt="img">
-                    <em>
-                        Site outage for server update. More updates soon. Tap read more for further information.
-                    </em>
-                    <a href="#">Read More</a>
-                    <a href="#">15th July 2016</a>
-                </p>
-                <div class="decoration hide-if-responsive"></div>
-                <p class="notification-page-item">
-                    <i class="fa fa-facebook" style="background-color:#3B5998;"></i>
-                    <em>
-                        We just launched a Facebook page, for news and updates, go ahead and like our page.
-                    </em>
-                    <a href="#">Like our Page</a>
-                    <a href="#">15th July 2016</a>
-                </p>
-                <div class="decoration"></div>
-                <p class="notification-page-item">
-                    <i class="fa fa-twitter" style="background-color:#40BBFF;"></i>
-                    <em>
-                        We've just reached 50.000 followers on twitter! Follow our twitter for the latest news!
-                    </em>
-                    <a href="#">Follow on Twitter</a>
-                    <a href="#">15th July 2016</a>
-                </p>  
-                <div class="decoration hide-if-responsive"></div> 
-                <p class="notification-page-item">
-                    <i class="fa fa-exclamation red-notification"></i>
-                    <em>
-                        Important notifications here! Just a simple class, copy and paste it and you're ready!
-                    </em>
-                    <a href="#">Follow on Twitter</a>
-                    <a href="#">15th July 2016</a>
-                </p>  
-                <div class="decoration"></div>   
-                <p class="notification-page-item">
-                    <i class="fa fa-check green-notification"></i>
-                    <em>
-                        Important notifications here! Just a simple class, copy and paste it and you're ready!
-                    </em>
-                    <a href="#">Follow on Twitter</a>
-                    <a href="#">15th July 2016</a>
-                </p>  
-                <div class="decoration hide-if-responsive"></div>  
-                <p class="notification-page-item">
-                    <i class="fa fa-warning yellow-notification"></i>
-                    <em>
-                        Important notifications here! Just a simple class, copy and paste it and you're ready!
-                    </em>
-                    <a href="#">Follow on Twitter</a>
-                    <a href="#">15th July 2016</a>
-                </p>  
-                <div class="decoration"></div>      
-                <p class="notification-page-item">
-                    <i class="fa fa-info blue-notification"></i>
-                    <em>
-                        Important notifications here! Just a simple class, copy and paste it and you're ready!
-                    </em>
-                    <a href="#">Follow on Twitter</a>
-                    <a href="#">15th July 2016</a>
-                </p>  
-                <div class="decoration hide-if-responsive"></div>   
-                <p class="notification-page-item">
-                    <img src="images/pictures/3s.jpg" alt="img">
-                    <em>
-                        You can also use all kinds of images and icons to express your notifications better!
-                    </em>
-                    <a href="#">Read More</a>
-                    <a href="#">15th July 2016</a>
-                </p>
-                <div class="decoration"></div>
-            </div>         
-        </div>     
-        <!-- Page Footer-->
-        <div class="footer">
-            <div class="footer-socials half-bottom">
-                <a href="#" class="footer-facebook"><i class="fa fa-facebook"></i></a>
-                <a href="#" class="footer-twitter"><i class="fa fa-twitter"></i></a>
-                <a href="#" class="footer-google"><i class="fa fa-google-plus"></i></a>
-                <a href="#" class="footer-share show-share-bottom"><i class="fa fa-share-alt"></i></a>
-                <a href="#" class="footer-up"><i class="fa fa-angle-up"></i></a>
-            </div>
-            <p class="center-text">Copyright 2015. All rights reserved.</p>
-        </div>       
-    </div>
-    
-    <div class="share-bottom">
-        <h3>Share Page</h3>
-        <div class="share-socials-bottom">
-            <a href="https://www.facebook.com/sharer/sharer.php?u=http://www.themeforest.net/">
-                <i class="fa fa-facebook facebook-color"></i>
-                Facebook
-            </a>
-            <a href="https://twitter.com/home?status=Check%20out%20ThemeForest%20http://www.themeforest.net">
-                <i class="fa fa-twitter twitter-color"></i>
-                Twitter
-            </a>
-            <a href="https://plus.google.com/share?url=http://www.themeforest.net">
-                <i class="fa fa-google-plus google-color"></i>
-                Google
-            </a>
 
-            <a href="https://pinterest.com/pin/create/button/?url=http://www.themeforest.net/&media=https://0.s3.envato.com/files/63790821/profile-image.jpg&description=Themes%20and%20Templates">
-                <i class="fa fa-pinterest-p pinterest-color"></i>
-                Pinterest
-            </a>
-            <a href="sms:">
-                <i class="fa fa-comment-o sms-color"></i>
-                Text
-            </a>
-            <a href="mailto:?&subject=Check this page out!&body=http://www.themeforest.net">
-                <i class="fa fa-envelope-o mail-color"></i>
-                Email
-            </a>
-        </div>
-        <a href="#" class="close-share-bottom">Close</a>
+            <div>
+                <div class="overlay dark-overlay"></div>
+                <div class="coverpage-image bg2 coverpage-style-3">
+                    <i class="fa fa-clock-o" style="left:50%; top:50%; margin-top:-120px;"></i>
+                    <p style="left:50%; margin-left:-140px; top:50%; margin-top:-20px;">
+                        With simple classes, it will take you less than 10 minutes to setup the entire coverpage. 
+                    </p>
+                    <a href="#" style="top:50%; margin-top:100px; left:50%; margin-left:-50px;" class="coverpage-button">Read More</a>
+                </div>
+            </div>
+
+            <div>
+                <div class="overlay dark-overlay"></div>
+                <div class="coverpage-image bg3 coverpage-style-2">
+                    <h3 style="height:180px; top:50%; margin-top:-180px;">
+                        FIND<br>
+                        THE<br>
+                        PERFECT<br>
+                        DESIGN<br>
+                    </h3>
+                    <p style="height:100px; top:50%; margin-top:20px;">
+                        Play along with the coverpage and 
+                        you'll find the perfect combination 
+                        that fits your needs.
+                    </p>
+                    <a style="top:50%; margin-top:140px; margin-left:25px;" href="#" class="coverpage-button">Read More</a>
+                </div>
+            </div>            
+        </div>   
     </div>
-    
 </div>
 
 </body>
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
