--- a/Johnny Wallet/www/templates/pageapp-shareboxes.html
+++ b/Johnny Wallet/www/templates/pageapp-shareboxes.html
@@ -70,10 +70,10 @@
                     </ul>
                 </li>
                 <li class="has-submenu">
-                    <a class="deploy-submenu active-submenu" href="#"><i class="fa fa-picture-o"></i>Portfolios<i class="fa fa-plus"></i></a>
-                    <ul class="submenu active-submenu-items">
+                    <a class="deploy-submenu" href="#"><i class="fa fa-picture-o"></i>Portfolios<i class="fa fa-plus"></i></a>
+                    <ul class="submenu">
                         <li><a href="portfolio-adaptive.html"><i class="fa fa-angle-right"></i>Adaptive<i class="fa fa-circle"></i></a></li>
-                        <li><a class="active-menu"  href="portfolio-one.html"><i class="fa fa-angle-right"></i>One Column<i class="fa fa-circle"></i></a></li>
+                        <li><a href="portfolio-one.html"><i class="fa fa-angle-right"></i>One Column<i class="fa fa-circle"></i></a></li>
                         <li><a href="portfolio-two.html"><i class="fa fa-angle-right"></i>Two Columns<i class="fa fa-circle"></i></a></li>
                     </ul>
                 </li>                 
@@ -96,22 +96,39 @@
                     </ul>
                 </li>                
                 <li class="has-submenu">
-                    <a class="deploy-submenu" href="#"><i class="fa fa-mobile"></i>App Specific<i class="fa fa-plus"></i></a>
-                    <ul class="submenu">
+                    <a class="deploy-submenu active-submenu" href="#"><i class="fa fa-mobile"></i>App Specific<i class="fa fa-plus"></i></a>
+                    <ul class="submenu active-submenu-items">
                         <li><a href="pageapp-login.html"><i class="fa fa-angle-right"></i>Login<i class="fa fa-circle"></i></a></li>
                         <li><a href="pageapp-sigin.html"><i class="fa fa-angle-right"></i>Signup<i class="fa fa-circle"></i></a></li>
                         <li><a href="pageapp-coverpage.html"><i class="fa fa-angle-right"></i>Coverpage<i class="fa fa-circle"></i></a></li>
                         <li><a href="pageapp-userlist.html"><i class="fa fa-angle-right"></i>User List<i class="fa fa-circle"></i></a></li>
-                        <li><a href="pageapp-calendar.html"><i class="fa fa-angle-right"></i>Calendar<i class="fa fa-circle"></i></a></li>
                         <li><a href="pageapp-activity.html"><i class="fa fa-angle-right"></i>Activity Feed<i class="fa fa-circle"></i></a></li>
+                        <li><a href="pageapp-calendar.html"><i class="fa fa-angle-right"></i>Calendar<i class="fa fa-circle"></i></a></li>
                         <li><a href="pageapp-bubbles.html"><i class="fa fa-angle-right"></i>Chat Bubbles<i class="fa fa-circle"></i></a></li>
-                        <li><a href="pageapp-shareboxes.html"><i class="fa fa-angle-right"></i>Share Boxes<i class="fa fa-circle"></i></a></li>
+                        <li><a class="active-menu" href="pageapp-shareboxes.html"><i class="fa fa-angle-right"></i>Share Boxes<i class="fa fa-circle"></i></a></li>
+                        <li><a href="pageapp-toggles.html"><i class="fa fa-angle-right"></i>Content Toggles<i class="fa fa-circle"></i></a></li>
                     </ul>
                 </li>
                 <li><a href="page-video.html"><i class="fa fa-youtube-play"></i>Videos<i class="fa fa-circle"></i></a></li>
                 <li><a href="page-blog.html"><i class="fa fa-pencil"></i>Blog<i class="fa fa-circle"></i></a></li>
                 <li><a href="contact.html"><i class="fa fa-envelope"></i>Contact<i class="fa fa-circle"></i></a></li>
             </ul>
+            <div class="sidebar-divider">
+                Copyright 2015. All rights reserved.
+            </div>
+        </div>
+        <div class="snap-drawer snap-drawer-right">
+            <div class="sidebar-header">
+                <a href="#"><i class="fa fa-phone"></i></a>
+                <a href="#"><i class="fa fa-comment"></i></a>
+                <a href="#"><i class="fa fa-facebook"></i></a>
+                <a href="#"><i class="fa fa-twitter"></i></a>
+                <a href="#"><i class="fa fa-times"></i></a>                
+            </div>
+            
+            <div class="sidebar-logo">
+                <a href="index.html"></a>
+            </div>
             
             <div class="sidebar-divider">
                 get social with us
@@ -150,7 +167,6 @@
                 <strong>Atention</strong>
                 <em>Released a right sidebar item</em>
             </a>
-            
             <div class="sidebar-divider">
                 Copyright 2015. All rights reserved.
             </div>
@@ -162,68 +178,76 @@
         <div class="header">
             <a href="index.html" class="header-logo"></a>
             <a href="#" class="open-menu"><i class="fa fa-navicon"></i></a>
+            <a href="#" class="open-more"><i class="fa fa-envelope-o"></i></a>
+        </div>
+        <div class="header-clear"></div>
+        
+        <div class="content">
+            <img class="responsive-image" src="images/pictures/3w.jpg" alt="img">
+            <p>
+                Share your content with easy to place share buttons, these are connected to social media.
+                When tapping them, a new page will appear that will have the current page address added!
+            </p>
+            <div class="decoration"></div>
+            
+            <div class="one-half-responsive">    
+                <div clas="container">
+                    <h3>Popup Share Box</h3>
+                    <p>
+                        Adding one class name to any element will make that element able to deploy a sharing box with
+                        the most popular social networks.
+                    </p>  
+                    <a href="#" class="show-share-bottom button button-green full-button full-bottom">Show Share Bottom Pop-up</a>
+                </div>
+
+                <div class="decoration"></div>
+
+                <div class="container">
+                    <h3>Share Buttons</h3>
+                    <p>
+                        Share buttons are easy to use and can be added under any box or container you wish.
+                    </p>
+                    <a href="https://www.facebook.com/sharer/sharer.php?u=http://www.themeforest.net/" class="facebook-color share-button-regular"><i class="fa fa-facebook"></i>Share to Facebook</a>
+                    <div class="one-half">
+                        <a href="https://twitter.com/home?status=Check%20out%20ThemeForest%20http://www.themeforest.net" class="twitter-color share-button-regular no-bottom"><i class="fa fa-twitter"></i>Twitter</a>
+                    </div>
+                    <div class="one-half last-column">
+                        <a href="https://plus.google.com/share?url=http://www.themeforest.net" class="google-color share-button-regular no-bottom"><i class="fa fa-google-plus"></i>Google</a>
+                    </div>
+                </div>
+                <div class="decoration hide-if-responsive"></div>
+            </div>
+                        
+            <div class="one-half-responsive last-column">
+                <div class="container">
+                    <h3>Share Circles</h3>
+                    <p>Regular share circles, can be added under any container you wish, copy and paste.</p>
+                    <a class="share-button-round facebook-color"  href="#"><i class="fa fa-facebook"></i></a>
+                    <a class="share-button-round twitter-color"   href="#"><i class="fa fa-twitter"></i></a>
+                    <a class="share-button-round google-color"    href="#"><i class="fa fa-google-plus"></i></a>
+                    <a class="share-button-round pinterest-color" href="#"><i class="fa fa-pinterest"></i></a>
+                    <a class="share-button-round sms-color"       href="#"><i class="fa fa-comment-o"></i></a>
+                    <a class="share-button-round mail-color"      href="#"><i class="fa fa-envelope-o"></i></a>
+                </div>
+
+                <div class="decoration"></div>
+
+                <div class="container">
+                    <h3>Share Squares</h3>
+                    <p>Regular share circles, can be added under any container you wish, copy and paste.</p>
+                    <a class="share-button-square facebook-color"   href="#"><i class="fa fa-facebook"></i></a>
+                    <a class="share-button-square twitter-color"    href="#"><i class="fa fa-twitter"></i></a>
+                    <a class="share-button-square google-color"     href="#"><i class="fa fa-google-plus"></i></a>
+                    <a class="share-button-square pinterest-color"  href="#"><i class="fa fa-pinterest"></i></a>
+                    <a class="share-button-square sms-color"        href="#"><i class="fa fa-comment-o"></i></a>
+                    <a class="share-button-square mail-color"       href="#"><i class="fa fa-envelope-o"></i></a>
+                </div>                
+            </div>
+            
+            <div class="decoration"></div>
+            
         </div>
         
-        <div class="header-clear"></div>
-        <div class="content">
-            <div class="portfolio-one">
-                <div class="portfolio-one-item full-bottom">
-                    <div class="portfolio-one-image">
-                        <a href="images/pictures/3.jpg" class="swipebox" title="Caption Here">
-                            <i class="fa fa-plus"></i>
-                        </a>
-                        <img src="images/pictures/3.jpg" class="responsive-image">
-                    </div>
-                    <div class="portfolio-one-text">
-                        <h3 class="title">Portfolio Item</h3>
-                        <em class="subtitle">Awesome one column portfolio</em>
-                        <div class="portfolio-one-details">
-                            <a href="#">10 September 2055</a>
-                            <a href="#">Mobile</a>
-                            <a href="#">Envato Item</a>
-                        </div>
-                        <p class="half-bottom">
-                            Lorem ipsum dolor sit amet, consectetur est adipiscing elit. Pellentesque lacus ex, 
-                            sollid um facilisis elementum quis, vulputate nec urna. In scelerisque tincidunt 
-                            enim, eutsmax. 
-                        </p>            
-                        <div class="portfolio-one-links">
-                            <a href="#"><i class="fa fa-arrow-right"></i> Visit Project</a>
-                            <a href="#">Details <i class="fa fa-link"></i></a>
-                        </div> 
-                    </div>       
-                </div>
-                <div class="decoration"></div>
-                <div class="portfolio-one-item full-bottom">
-                    <div class="portfolio-one-image">
-                        <a href="images/pictures/5.jpg" class="swipebox" title="Caption Here">
-                            <i class="fa fa-plus"></i>
-                        </a>
-                        <img src="images/pictures/5.jpg" class="responsive-image">
-                    </div>
-                    <div class="portfolio-one-text">
-                        <h3 class="title">Portfolio Item</h3>
-                        <em class="subtitle">Awesome one column portfolio</em>
-                        <div class="portfolio-one-details">
-                            <a href="#">10 September 2055</a>
-                            <a href="#">Mobile</a>
-                            <a href="#">Envato Item</a>
-                        </div>
-                        <p class="half-bottom">
-                            Lorem ipsum dolor sit amet, consectetur est adipiscing elit. Pellentesque lacus ex, 
-                            sollid um facilisis elementum quis, vulputate nec urna. In scelerisque tincidunt 
-                            enim, eutsmax. 
-                        </p>            
-                        <div class="portfolio-one-links">
-                            <a href="#"><i class="fa fa-arrow-right"></i> Visit Project</a>
-                            <a href="#">Details <i class="fa fa-link"></i></a>
-                        </div> 
-                    </div>       
-                </div>
-            <div class="decoration"></div>
-            </div>
-        </div>
-            
         <!-- Page Footer-->
         <div class="footer">
             <div class="footer-socials half-bottom">
@@ -272,6 +296,18 @@
 </div>
 
 </body>
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
