--- a/Johnny Wallet/www/templates/pageapp-toggles.html
+++ b/Johnny Wallet/www/templates/pageapp-toggles.html
@@ -96,8 +96,8 @@
                     </ul>
                 </li>                
                 <li class="has-submenu">
-                    <a class="deploy-submenu" href="#"><i class="fa fa-mobile"></i>App Specific<i class="fa fa-plus"></i></a>
-                    <ul class="submenu">
+                    <a class="deploy-submenu active-submenu" href="#"><i class="fa fa-mobile"></i>App Specific<i class="fa fa-plus"></i></a>
+                    <ul class="submenu active-submenu-items">
                         <li><a href="pageapp-login.html"><i class="fa fa-angle-right"></i>Login<i class="fa fa-circle"></i></a></li>
                         <li><a href="pageapp-sigin.html"><i class="fa fa-angle-right"></i>Signup<i class="fa fa-circle"></i></a></li>
                         <li><a href="pageapp-coverpage.html"><i class="fa fa-angle-right"></i>Coverpage<i class="fa fa-circle"></i></a></li>
@@ -106,12 +106,29 @@
                         <li><a href="pageapp-activity.html"><i class="fa fa-angle-right"></i>Activity Feed<i class="fa fa-circle"></i></a></li>
                         <li><a href="pageapp-bubbles.html"><i class="fa fa-angle-right"></i>Chat Bubbles<i class="fa fa-circle"></i></a></li>
                         <li><a href="pageapp-shareboxes.html"><i class="fa fa-angle-right"></i>Share Boxes<i class="fa fa-circle"></i></a></li>
+                        <li><a class="active-menu" href="pageapp-toggles.html"><i class="fa fa-angle-right"></i>Content Toggles<i class="fa fa-circle"></i></a></li>
                     </ul>
                 </li>
-                <li><a class="active-menu" href="page-video.html"><i class="fa fa-youtube-play"></i>Videos<i class="fa fa-circle"></i></a></li>
+                <li><a href="page-video.html"><i class="fa fa-youtube-play"></i>Videos<i class="fa fa-circle"></i></a></li>
                 <li><a href="page-blog.html"><i class="fa fa-pencil"></i>Blog<i class="fa fa-circle"></i></a></li>
                 <li><a href="contact.html"><i class="fa fa-envelope"></i>Contact<i class="fa fa-circle"></i></a></li>
             </ul>
+            <div class="sidebar-divider">
+                Copyright 2015. All rights reserved.
+            </div>
+        </div>
+        <div class="snap-drawer snap-drawer-right">
+            <div class="sidebar-header">
+                <a href="#"><i class="fa fa-phone"></i></a>
+                <a href="#"><i class="fa fa-comment"></i></a>
+                <a href="#"><i class="fa fa-facebook"></i></a>
+                <a href="#"><i class="fa fa-twitter"></i></a>
+                <a href="#"><i class="fa fa-times"></i></a>                
+            </div>
+            
+            <div class="sidebar-logo">
+                <a href="index.html"></a>
+            </div>
             
             <div class="sidebar-divider">
                 get social with us
@@ -150,7 +167,6 @@
                 <strong>Atention</strong>
                 <em>Released a right sidebar item</em>
             </a>
-            
             <div class="sidebar-divider">
                 Copyright 2015. All rights reserved.
             </div>
@@ -162,42 +178,203 @@
         <div class="header">
             <a href="index.html" class="header-logo"></a>
             <a href="#" class="open-menu"><i class="fa fa-navicon"></i></a>
+            <a href="#" class="open-more"><i class="fa fa-envelope-o"></i></a>
         </div>
         <div class="header-clear"></div>
         
         <div class="content">
             
-            <div class="container no-bottom">
-                <h3>Video Page</h3>
-                <p>
-                    Embed your videos with great ease with default embed codes. The responsive-video 
-                    class handles the rest and automatically cleans the code and the design.
-                </p>
+            <h3>Mobile style switches!</h3>
+            <p>
+                Switches styled to bring a more natural feel to your mobile website with a native design.
+            </p>
+
+            <div class="decoration"></div>
+
+            <div class="one-third-responsive">
+                <!-- iOS Styled Toggles -->
+                <div class="container switch-box">
+                    <h4>iOS Style 1</h4>
+                    <a href="#" class="switch switch-1 switch-1-on">
+                        <em>I</em>
+                        <span></span>
+                        <em>0</em>
+                    </a>
+                    <em class="switch-box-subtitle">
+                        Optional subtitle can be added here, this message automatically hides when the content is shown!
+                    </em>
+                    <div class="switch-box-content">
+                        <p class="no-bottom">
+                            Switches can be used as content toggles, where you can add almost every feature from the page inside of them.
+                            We also provided the styles, so if you want you can even convert these to checkboxes. By default, they function
+                            as content toggles! An extra style for your device!
+                        </p>
+                    </div>
+                </div>
+
+                <div class="container switch-box">
+                    <h4>iOS Style 2</h4>
+                    <a href="#" class="switch-icon switch-1 switch-1-on">
+                        <em><i class="fa fa-times"></i></em>
+                        <span></span>
+                        <em><i class="fa fa-check"></i></em>
+                    </a>
+                    <em class="switch-box-subtitle">
+                        Optional subtitle can be added here, this message automatically hides when the content is shown!
+                    </em>
+                    <div class="switch-box-content">
+                        <p class="no-bottom">
+                            Switches can be used as content toggles, where you can add almost every feature from the page inside of them.
+                            We also provided the styles, so if you want you can even convert these to checkboxes. By default, they function
+                            as content toggles! An extra style for your device!
+                        </p>
+                    </div>
+                </div>
+
+                <div class="container switch-box">
+                    <h4>iOS Style 3</h4>
+                    <a href="#" class="switch switch-1 switch-1-on">
+                        <span></span>
+                    </a>
+                    <em class="switch-box-subtitle">
+                        Optional subtitle can be added here, this message automatically hides when the content is shown!
+                    </em>
+                    <div class="switch-box-content">
+                        <p class="no-bottom">
+                            Switches can be used as content toggles, where you can add almost every feature from the page inside of them.
+                            We also provided the styles, so if you want you can even convert these to checkboxes. By default, they function
+                            as content toggles! An extra style for your device!
+                        </p>
+                    </div>
+                </div>
             </div>
             
-            <div class="decoration"></div>
+            <div class="decoration hide-if-responsive"></div>
             
-            <div>
-                <iframe class="responsive-video" src="http://player.vimeo.com/video/7449107"></iframe>
-                <h4>YouTube Video</h4>
-                <p>We like portfolios a lot! We've optimized them to the extreme to make them work like a charm on mobiles!</p>
-            </div>
-            <div class="decoration"></div>
-            <div>
-                <iframe class="responsive-video" src="http://www.youtube.com/embed/9S-RHXlsjyY"></iframe>
-                <h4>Vimeo Video</h4>
-                <p>We like portfolios a lot! We've optimized them to the extreme to make them work like a charm on mobiles!</p>
-            </div>
-            <div class="decoration"></div>
-            <div>
-                <iframe class="responsive-video" src="http://player.vimeo.com/video/7449107"></iframe>
-                <h4>YouTube Video</h4>
-                <p>We like portfolios a lot! We've optimized them to the extreme to make them work like a charm on mobiles!</p>
+            <div class="one-third-responsive">
+                <!-- Android Styled Toggle -->
+                <div class="container switch-box">
+                    <h4>Android Style 1</h4>
+                    <a href="#" class="switch switch-2">
+                        <span>
+                            <em>I<br>O</em>
+                        </span>
+                    </a>
+                    <em class="switch-box-subtitle">
+                        Optional subtitle can be added here, this message automatically hides when the content is shown!
+                    </em>
+                    <div class="switch-box-content">
+                        <p class="no-bottom">
+                            Switches can be used as content toggles, where you can add almost every feature from the page inside of them.
+                            We also provided the styles, so if you want you can even convert these to checkboxes. By default, they function
+                            as content toggles! An extra style for your device!
+                        </p>
+                    </div>
+                </div>
+
+                <div class="container switch-box">
+                    <h4>Android Style 2</h4>
+                    <a href="#" class="switch switch-2">
+                        <span>
+                            <em><i class="fa fa-check"></i><br><i class="fa fa-plus"></i></em>
+                        </span>
+                    </a>
+                    <em class="switch-box-subtitle">
+                        Optional subtitle can be added here, this message automatically hides when the content is shown!
+                    </em>
+                    <div class="switch-box-content">
+                        <p class="no-bottom">
+                            Switches can be used as content toggles, where you can add almost every feature from the page inside of them.
+                            We also provided the styles, so if you want you can even convert these to checkboxes. By default, they function
+                            as content toggles! An extra style for your device!
+                        </p>
+                    </div>
+                </div>
+
+                <div class="container switch-box">
+                    <h4>Android Style 3</h4>
+                    <a href="#" class="switch switch-2">
+                        <span></span>
+                    </a>
+                    <em class="switch-box-subtitle">
+                        Optional subtitle can be added here, this message automatically hides when the content is shown!
+                    </em>
+                    <div class="switch-box-content">
+                        <p class="no-bottom">
+                            Switches can be used as content toggles, where you can add almost every feature from the page inside of them.
+                            We also provided the styles, so if you want you can even convert these to checkboxes. By default, they function
+                            as content toggles! An extra style for your device!
+                        </p>
+                    </div>
+                </div>
             </div>
             
+            <div class="decoration hide-if-responsive"></div>
+
+            <div class="one-third-responsive last-column">
+                <!-- Windows / BlackBerry Styled Toggle -->
+                <div class="container switch-box">
+                    <h4>Win / BB Style 1</h4>
+                    <a href="#" class="switch switch-3">
+                        <strong></strong>
+                        <span></span>
+                        <em>I</em>
+                        <em>O</em>
+                    </a>
+                    <em class="switch-box-subtitle">
+                        Optional subtitle can be added here, this message automatically hides when the content is shown!
+                    </em>
+                    <div class="switch-box-content">
+                        <p class="no-bottom">
+                            Switches can be used as content toggles, where you can add almost every feature from the page inside of them.
+                            We also provided the styles, so if you want you can even convert these to checkboxes. By default, they function
+                            as content toggles! An extra style for your device!
+                        </p>
+                    </div>
+                </div>
+
+                <div class="container switch-box">
+                    <h4>Win / BB Style 2</h4>
+                    <a href="#" class="switch switch-3">
+                        <strong></strong>
+                        <span></span>
+                        <em>+</em>
+                        <em>-</em>
+                    </a>
+                    <em class="switch-box-subtitle">
+                        Optional subtitle can be added here, this message automatically hides when the content is shown!
+                    </em>
+                    <div class="switch-box-content">
+                        <p class="no-bottom">
+                            Switches can be used as content toggles, where you can add almost every feature from the page inside of them.
+                            We also provided the styles, so if you want you can even convert these to checkboxes. By default, they function
+                            as content toggles! An extra style for your device!
+                        </p>
+                    </div>
+                </div>
+
+                <div class="container switch-box">
+                    <h4>Win / BB Style 3</h4>
+                    <a href="#" class="switch switch-3">
+                        <strong></strong>
+                        <span></span>
+                    </a>
+                    <em class="switch-box-subtitle">
+                        Optional subtitle can be added here, this message automatically hides when the content is shown!
+                    </em>
+                    <div class="switch-box-content">
+                        <p class="no-bottom">
+                            Switches can be used as content toggles, where you can add almost every feature from the page inside of them.
+                            We also provided the styles, so if you want you can even convert these to checkboxes. By default, they function
+                            as content toggles! An extra style for your device!
+                        </p>
+                    </div>
+                </div>
+            </div>        
             <div class="decoration"></div>
-            
+        
         </div>
+        
         <!-- Page Footer-->
         <div class="footer">
             <div class="footer-socials half-bottom">
@@ -246,6 +423,16 @@
 </div>
 
 </body>
+
+
+
+
+
+
+
+
+
+
 
 
 
