--- a/Johnny Wallet/www/templates/pageapp-userlist.html
+++ b/Johnny Wallet/www/templates/pageapp-userlist.html
@@ -60,7 +60,7 @@
             </div>
             
             <ul class="sidebar-navigation">
-                <li><a href="#"><i class="fa fa-home"></i>Home<i class="fa fa-circle"></i></a></li>
+                <li><a href="index.html"><i class="fa fa-home"></i>Home<i class="fa fa-circle"></i></a></li>
                 <li class="has-submenu">
                     <a class="deploy-submenu" href="#"><i class="fa fa-cog"></i>Features<i class="fa fa-plus"></i></a>
                     <ul class="submenu">
@@ -96,22 +96,39 @@
                     </ul>
                 </li>                
                 <li class="has-submenu">
-                    <a class="deploy-submenu" href="#"><i class="fa fa-mobile"></i>App Specific<i class="fa fa-plus"></i></a>
-                    <ul class="submenu">
+                    <a class="deploy-submenu active-submenu" href="#"><i class="fa fa-mobile"></i>App Specific<i class="fa fa-plus"></i></a>
+                    <ul class="submenu active-submenu-items">
                         <li><a href="pageapp-login.html"><i class="fa fa-angle-right"></i>Login<i class="fa fa-circle"></i></a></li>
                         <li><a href="pageapp-sigin.html"><i class="fa fa-angle-right"></i>Signup<i class="fa fa-circle"></i></a></li>
                         <li><a href="pageapp-coverpage.html"><i class="fa fa-angle-right"></i>Coverpage<i class="fa fa-circle"></i></a></li>
-                        <li><a href="pageapp-userlist.html"><i class="fa fa-angle-right"></i>User List<i class="fa fa-circle"></i></a></li>
+                        <li><a class="active-menu" href="pageapp-userlist.html"><i class="fa fa-angle-right"></i>User List<i class="fa fa-circle"></i></a></li>
                         <li><a href="pageapp-calendar.html"><i class="fa fa-angle-right"></i>Calendar<i class="fa fa-circle"></i></a></li>
                         <li><a href="pageapp-activity.html"><i class="fa fa-angle-right"></i>Activity Feed<i class="fa fa-circle"></i></a></li>
                         <li><a href="pageapp-bubbles.html"><i class="fa fa-angle-right"></i>Chat Bubbles<i class="fa fa-circle"></i></a></li>
                         <li><a href="pageapp-shareboxes.html"><i class="fa fa-angle-right"></i>Share Boxes<i class="fa fa-circle"></i></a></li>
+                        <li><a href="pageapp-toggles.html"><i class="fa fa-angle-right"></i>Content Toggles<i class="fa fa-circle"></i></a></li>
                     </ul>
                 </li>
                 <li><a href="page-video.html"><i class="fa fa-youtube-play"></i>Videos<i class="fa fa-circle"></i></a></li>
                 <li><a href="page-blog.html"><i class="fa fa-pencil"></i>Blog<i class="fa fa-circle"></i></a></li>
-                <li><a class="active-menu" href="contact.html"><i class="fa fa-envelope"></i>Contact<i class="fa fa-circle"></i></a></li>
+                <li><a href="contact.html"><i class="fa fa-envelope"></i>Contact<i class="fa fa-circle"></i></a></li>
             </ul>
+            <div class="sidebar-divider">
+                Copyright 2015. All rights reserved.
+            </div>
+        </div>
+        <div class="snap-drawer snap-drawer-right">
+            <div class="sidebar-header">
+                <a href="#"><i class="fa fa-phone"></i></a>
+                <a href="#"><i class="fa fa-comment"></i></a>
+                <a href="#"><i class="fa fa-facebook"></i></a>
+                <a href="#"><i class="fa fa-twitter"></i></a>
+                <a href="#"><i class="fa fa-times"></i></a>                
+            </div>
+            
+            <div class="sidebar-logo">
+                <a href="index.html"></a>
+            </div>
             
             <div class="sidebar-divider">
                 get social with us
@@ -150,7 +167,6 @@
                 <strong>Atention</strong>
                 <em>Released a right sidebar item</em>
             </a>
-            
             <div class="sidebar-divider">
                 Copyright 2015. All rights reserved.
             </div>
@@ -162,97 +178,113 @@
         <div class="header">
             <a href="index.html" class="header-logo"></a>
             <a href="#" class="open-menu"><i class="fa fa-navicon"></i></a>
+            <a href="#" class="open-more"><i class="fa fa-envelope-o"></i></a>
         </div>
-
-        <div class="maps-container">
-            <iframe class="responsive-image maps" src="https://maps.google.com/?ie=UTF8&amp;ll=47.595131,-122.330414&amp;spn=0.006186,0.016512&amp;t=h&amp;z=17&amp;output=embed"></iframe>
-        </div>
-
+        
+        <div class="header-clear"></div>        
         <div class="content">
-            <div class="decoration"></div>
-            <div class="one-half-responsive">
-                <h4>Send us an email!</h4>
-                <p>Use the form to send us a message, it's AJAX and PHP powered and it's easy to use!</p>
-                <div class="container no-bottom">
-                    <div class="contact-form no-bottom"> 
-                        <div class="formSuccessMessageWrap" id="formSuccessMessageWrap">
-                            <div class="big-notification green-notification">
-                                <h3 class="uppercase">Message Sent </h3>
-                                <a href="#" class="close-big-notification">x</a>
-                                <p>Your message has been successfuly sent. Please allow up to 48 hours for a reply! Thank you!</p>
-                            </div>
-                        </div>
-
-                        <form action="php/contact.php" method="post" class="contactForm" id="contactForm">
-                            <fieldset>
-                                <div class="formValidationError" id="contactNameFieldError">
-                                    <div class="static-notification-red tap-dismiss-notification">
-                                        <p class="center-text uppercase">Name is required!</p>
-                                    </div>
-                                </div>             
-                                <div class="formValidationError" id="contactEmailFieldError">
-                                    <div class="static-notification-red tap-dismiss-notification">
-                                        <p class="center-text uppercase">Mail address required!</p>
-                                    </div>
-                                </div> 
-                                <div class="formValidationError" id="contactEmailFieldError2">
-                                    <div class="static-notification-red tap-dismiss-notification">
-                                        <p class="center-text uppercase">Mail address must be valid!</p>
-                                    </div>
-                                </div> 
-                                <div class="formValidationError" id="contactMessageTextareaError">
-                                    <div class="static-notification-red tap-dismiss-notification">
-                                        <p class="center-text uppercase">Message field is empty!</p>
-                                    </div>
-                                </div>   
-                                <div class="formFieldWrap">
-                                    <label class="field-title contactNameField" for="contactNameField">Name:<span>(required)</span></label>
-                                    <input type="text" name="contactNameField" value="" class="contactField requiredField" id="contactNameField"/>
-                                </div>
-                                <div class="formFieldWrap">
-                                    <label class="field-title contactEmailField" for="contactEmailField">Email: <span>(required)</span></label>
-                                    <input type="text" name="contactEmailField" value="" class="contactField requiredField requiredEmailField" id="contactEmailField"/>
-                                </div>
-                                <div class="formTextareaWrap">
-                                    <label class="field-title contactMessageTextarea" for="contactMessageTextarea">Message: <span>(required)</span></label>
-                                    <textarea name="contactMessageTextarea" class="contactTextarea requiredField" id="contactMessageTextarea"></textarea>
-                                </div>
-                                <div class="formSubmitButtonErrorsWrap">
-                                    <input type="submit" class="buttonWrap button button-green contactSubmitButton" id="contactSubmitButton" value="SUBMIT" data-formId="contactForm"/>
-                                </div>
-                            </fieldset>
-                        </form>       
-                    </div>
-                </div>
-            </div>
-            <div class="decoration hide-if-responsive"></div>
-            <div class="one-half-responsive last-column">
-                <div class="container no-bottom">
-                    <h4>Contact Information</h4>
-                    <p>
-                        <strong>Postal Information</strong><br>
-                        PO Box 16122 Collins Street West<br>
-                        Victoria 8007 Australia
-                    </p>
-                    <p>
-                        <strong>Envato Headquarters</strong><br>
-                        121 King Street, Melbourne <br>
-                        Victoria 3000 Australia
-                    </p>
-                    <p>
-                        <strong>Contact Information:</strong><br>
-                        <a href="#" class="contact-call"><i class="fa fa-phone"></i>Phone: + 123 456 7890</a>
-                        <a href="#" class="contact-text"><i class="fa fa-comments"></i>Message: + 123 456 7890</a>
-                        <a href="#" class="contact-mail"><i class="fa fa-envelope"></i>Email: mail@doamin.com</a>
-                        <a href="#" class="contact-facebook"><i class="fa fa-facebook"></i>Fanpage: enabled.labs</a>
-                        <a href="#" class="contact-twitter"><i class="fa fa-twitter"></i>Twitter: @iEnabled</a>
-                    </p>
-                </div>            
-            </div>
-        </div>
-
-        <div class="decoration container"></div> 
             
+            <div class="container no-bottom">
+                <h3>User Lists</h3>
+                <p>
+                    User lists styled to look like those on your mobile app. You can link them to separate pages,
+                    add follow buttons or simply connect them to your social media items. It's as easy as copy pasting a class!
+                </p>
+            </div>
+            
+            <div class="decoration"></div>
+            <div class="one-third-responsive">
+                <a href="#" class="user-list-item">
+                    <img src="images/pictures/1s.jpg" alt="img">
+                    <strong>User One<br></strong>
+                    <em>United States, New York, NY </em>
+                    <i class="fa fa-chevron-right"></i>
+                </a>
+                <div class="decoration"></div>                
+                <a href="#" class="user-list-item">
+                    <img src="images/pictures/2s.jpg" alt="img">
+                    <strong>User Two<br></strong>
+                    <em>United States, New York, NY </em>
+                    <i class="fa fa-chevron-right"></i>
+                </a>
+                <div class="decoration"></div>                
+                <a href="#" class="user-list-item">
+                    <img src="images/pictures/3s.jpg" alt="img">
+                    <strong>User Three<br></strong>
+                    <em>United States, New York, NY </em>
+                    <i class="fa fa-chevron-right"></i>
+                </a>
+                <div class="decoration"></div>                
+                <a href="#" class="user-list-item">
+                    <img src="images/pictures/4s.jpg" alt="img">
+                    <strong>User Four<br></strong>
+                    <em>United States, New York, NY </em>
+                    <i class="fa fa-chevron-right"></i>
+                </a>
+                <div class="decoration"></div>
+            </div>
+            
+            
+            <div class="one-third-responsive">
+                <p class="user-list-follow">
+                    <img src="images/pictures/1s.jpg" alt="img">
+                    <strong>User One<br><em>Some sample text here.</em></strong>
+                    <a href="#" class="follow">Follow</a>
+                </p>
+                <div class="decoration"></div>                
+                <p class="user-list-follow">
+                    <img src="images/pictures/2s.jpg" alt="img">
+                    <strong>User Two<br><em>Some sample text here.</em></strong>
+                    <a href="#" class="follow">Follow</a>
+                </p>
+                <div class="decoration"></div>                
+                <p class="user-list-follow">
+                    <img src="images/pictures/3s.jpg" alt="img">
+                    <strong>User Three<br><em>Some sample text here.</em></strong>
+                    <a href="#" class="follow">Follow</a>
+                </p>
+                <div class="decoration"></div>                
+                <p class="user-list-follow">
+                    <img src="images/pictures/4s.jpg" alt="img">
+                    <strong>User Four<br><em>Some sample text here.</em></strong>
+                    <a href="#" class="follow">Follow</a>
+                </p>
+                <div class="decoration"></div>
+            </div>            
+            
+            <div class="one-third-responsive last-column">
+                <p class="user-list-socials">
+                    <img src="images/pictures/1s.jpg" alt="img">
+                    <strong>User One<br><em>User is on his socials</em></strong>
+                    <a href="#" class="icon1 facebook-color"><i class="fa fa-facebook"></i></a>
+                    <a href="#" class="icon2 twitter-color"><i class="fa fa-twitter"></i></a>
+                </p>
+                <div class="decoration"></div>                
+                <p class="user-list-socials">
+                    <img src="images/pictures/2s.jpg" alt="img">
+                    <strong>User Two<br><em>User is on his socials</em></strong>
+                    <a href="#" class="icon1 google-color"><i class="fa fa-google-plus"></i></a>
+                    <a href="#" class="icon2 facebook-color"><i class="fa fa-facebook"></i></a>
+                </p>
+                <div class="decoration"></div>                
+                <p class="user-list-socials">
+                    <img src="images/pictures/3s.jpg" alt="img">
+                    <strong>User Three<br><em>User is on his socials</em></strong>
+                    <a href="#" class="icon1 twitter-color"><i class="fa fa-twitter"></i></a>
+                    <a href="#" class="icon2 google-color"><i class="fa fa-google-plus"></i></a>
+                </p>
+                <div class="decoration"></div>                
+                <p class="user-list-socials">
+                    <img src="images/pictures/4s.jpg" alt="img">
+                    <strong>User Four<br><em>User is on his socials</em></strong>
+                    <a href="#" class="icon1 facebook-color"><i class="fa fa-facebook"></i></a>
+                    <a href="#" class="icon2 twitter-color"><i class="fa fa-twitter"></i></a>
+                </p>
+                <div class="decoration"></div>
+            </div>           
+            
+        </div>
+        
         <!-- Page Footer-->
         <div class="footer">
             <div class="footer-socials half-bottom">
@@ -301,6 +333,18 @@
 </div>
 
 </body>
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
