--- a/Johnny Wallet/www/templates/portfolio-one.html
+++ b/Johnny Wallet/www/templates/portfolio-one.html
@@ -70,18 +70,18 @@
                     </ul>
                 </li>
                 <li class="has-submenu">
-                    <a class="deploy-submenu" href="#"><i class="fa fa-picture-o"></i>Portfolios<i class="fa fa-plus"></i></a>
-                    <ul class="submenu">
+                    <a class="deploy-submenu active-submenu" href="#"><i class="fa fa-picture-o"></i>Portfolios<i class="fa fa-plus"></i></a>
+                    <ul class="submenu active-submenu-items">
                         <li><a href="portfolio-adaptive.html"><i class="fa fa-angle-right"></i>Adaptive<i class="fa fa-circle"></i></a></li>
-                        <li><a href="portfolio-one.html"><i class="fa fa-angle-right"></i>One Column<i class="fa fa-circle"></i></a></li>
+                        <li><a class="active-menu"  href="portfolio-one.html"><i class="fa fa-angle-right"></i>One Column<i class="fa fa-circle"></i></a></li>
                         <li><a href="portfolio-two.html"><i class="fa fa-angle-right"></i>Two Columns<i class="fa fa-circle"></i></a></li>
                     </ul>
                 </li>                 
                 <li class="has-submenu">
-                    <a class="deploy-submenu active-submenu" href="#"><i class="fa fa-camera"></i>Gallery<i class="fa fa-plus"></i></a>
-                    <ul class="submenu active-submenu-items">
+                    <a class="deploy-submenu" href="#"><i class="fa fa-camera"></i>Gallery<i class="fa fa-plus"></i></a>
+                    <ul class="submenu">
                         <li><a href="gallery-square.html"><i class="fa fa-angle-right"></i>Square Thumbs<i class="fa fa-circle"></i></a></li>
-                        <li><a class="active-menu" href="gallery-round.html"><i class="fa fa-angle-right"></i>Round Thumbs<i class="fa fa-circle"></i></a></li>
+                        <li><a href="gallery-round.html"><i class="fa fa-angle-right"></i>Round Thumbs<i class="fa fa-circle"></i></a></li>
                         <li><a href="gallery-wide.html"><i class="fa fa-angle-right"></i>Wide Thumbs<i class="fa fa-circle"></i></a></li>
                     </ul>
                 </li>                 
@@ -112,6 +112,22 @@
                 <li><a href="page-blog.html"><i class="fa fa-pencil"></i>Blog<i class="fa fa-circle"></i></a></li>
                 <li><a href="contact.html"><i class="fa fa-envelope"></i>Contact<i class="fa fa-circle"></i></a></li>
             </ul>
+            <div class="sidebar-divider">
+                Copyright 2015. All rights reserved.
+            </div>
+        </div>
+        <div class="snap-drawer snap-drawer-right">
+            <div class="sidebar-header">
+                <a href="#"><i class="fa fa-phone"></i></a>
+                <a href="#"><i class="fa fa-comment"></i></a>
+                <a href="#"><i class="fa fa-facebook"></i></a>
+                <a href="#"><i class="fa fa-twitter"></i></a>
+                <a href="#"><i class="fa fa-times"></i></a>                
+            </div>
+            
+            <div class="sidebar-logo">
+                <a href="index.html"></a>
+            </div>
             
             <div class="sidebar-divider">
                 get social with us
@@ -150,7 +166,6 @@
                 <strong>Atention</strong>
                 <em>Released a right sidebar item</em>
             </a>
-            
             <div class="sidebar-divider">
                 Copyright 2015. All rights reserved.
             </div>
@@ -162,32 +177,68 @@
         <div class="header">
             <a href="index.html" class="header-logo"></a>
             <a href="#" class="open-menu"><i class="fa fa-navicon"></i></a>
+            <a href="#" class="open-more"><i class="fa fa-envelope-o"></i></a>
         </div>
         
         <div class="header-clear"></div>
         <div class="content">
-            <div class="container no-bottom">
-                <h4>Round touch swipe gallery!</h4>
-                <p>A gallery is essential in any template, so, if it's a mobile device, why not a touch one!</p>
-            </div>
-            <ul class="gallery round-thumb">
-                <li><a class="swipebox" href="images/pictures/1.jpg" title="An awesome gallery!"><img src="images/pictures/1s.jpg" alt="img" /></a></li>
-                <li><a class="swipebox" href="images/pictures/2.jpg" title="An awesome gallery!"><img src="images/pictures/2s.jpg" alt="img" /></a></li>
-                <li><a class="swipebox" href="images/pictures/3.jpg" title="An awesome gallery!"><img src="images/pictures/3s.jpg" alt="img" /></a></li>
-                <li><a class="swipebox" href="images/pictures/4.jpg" title="An awesome gallery!"><img src="images/pictures/4s.jpg" alt="img" /></a></li>
-                <li><a class="swipebox" href="images/pictures/5.jpg" title="An awesome gallery!"><img src="images/pictures/5s.jpg" alt="img" /></a></li>
-                <li><a class="swipebox" href="images/pictures/6.jpg" title="An awesome gallery!"><img src="images/pictures/6s.jpg" alt="img" /></a></li>
-                <li><a class="swipebox" href="images/pictures/7.jpg" title="An awesome gallery!"><img src="images/pictures/7s.jpg" alt="img" /></a></li>
-                <li><a class="swipebox" href="images/pictures/8.jpg" title="An awesome gallery!"><img src="images/pictures/8s.jpg" alt="img" /></a></li>
-                <li><a class="swipebox" href="images/pictures/1.jpg" title="An awesome gallery!"><img src="images/pictures/1s.jpg" alt="img" /></a></li>
-                <li><a class="swipebox" href="images/pictures/2.jpg" title="An awesome gallery!"><img src="images/pictures/2s.jpg" alt="img" /></a></li>
-                <li><a class="swipebox" href="images/pictures/3.jpg" title="An awesome gallery!"><img src="images/pictures/3s.jpg" alt="img" /></a></li>
-                <li><a class="swipebox" href="images/pictures/4.jpg" title="An awesome gallery!"><img src="images/pictures/4s.jpg" alt="img" /></a></li>
-            </ul>
-            
+            <div class="portfolio-one">
+                <div class="portfolio-one-item full-bottom">
+                    <div class="portfolio-one-image">
+                        <a href="images/pictures/3.jpg" class="swipebox" title="Caption Here">
+                            <i class="fa fa-plus"></i>
+                        </a>
+                        <img src="images/pictures/3.jpg" class="responsive-image">
+                    </div>
+                    <div class="portfolio-one-text">
+                        <h3 class="title">Portfolio Item</h3>
+                        <em class="subtitle">Awesome one column portfolio</em>
+                        <div class="portfolio-one-details">
+                            <a href="#">10 September 2055</a>
+                            <a href="#">Mobile</a>
+                            <a href="#">Envato Item</a>
+                        </div>
+                        <p class="half-bottom">
+                            Lorem ipsum dolor sit amet, consectetur est adipiscing elit. Pellentesque lacus ex, 
+                            sollid um facilisis elementum quis, vulputate nec urna. In scelerisque tincidunt 
+                            enim, eutsmax. 
+                        </p>            
+                        <div class="portfolio-one-links">
+                            <a href="#"><i class="fa fa-arrow-right"></i> Visit Project</a>
+                            <a href="#">Details <i class="fa fa-link"></i></a>
+                        </div> 
+                    </div>       
+                </div>
+                <div class="decoration"></div>
+                <div class="portfolio-one-item full-bottom">
+                    <div class="portfolio-one-image">
+                        <a href="images/pictures/5.jpg" class="swipebox" title="Caption Here">
+                            <i class="fa fa-plus"></i>
+                        </a>
+                        <img src="images/pictures/5.jpg" class="responsive-image">
+                    </div>
+                    <div class="portfolio-one-text">
+                        <h3 class="title">Portfolio Item</h3>
+                        <em class="subtitle">Awesome one column portfolio</em>
+                        <div class="portfolio-one-details">
+                            <a href="#">10 September 2055</a>
+                            <a href="#">Mobile</a>
+                            <a href="#">Envato Item</a>
+                        </div>
+                        <p class="half-bottom">
+                            Lorem ipsum dolor sit amet, consectetur est adipiscing elit. Pellentesque lacus ex, 
+                            sollid um facilisis elementum quis, vulputate nec urna. In scelerisque tincidunt 
+                            enim, eutsmax. 
+                        </p>            
+                        <div class="portfolio-one-links">
+                            <a href="#"><i class="fa fa-arrow-right"></i> Visit Project</a>
+                            <a href="#">Details <i class="fa fa-link"></i></a>
+                        </div> 
+                    </div>       
+                </div>
             <div class="decoration"></div>
-            
-        </div>  
+            </div>
+        </div>
             
         <!-- Page Footer-->
         <div class="footer">
